add category blog news

--- a/language/en-GB/en-GB.tpl_italiapa.sys.ini
+++ b/language/en-GB/en-GB.tpl_italiapa.sys.ini
@@ -12,6 +12,9 @@ TPL_ITALIAPA_CATEGORY_VIEW_GRID_TITLE="Category Blog (layout: Grid)"
 TPL_ITALIAPA_CATEGORY_VIEW_MASONRY_DESC="Displays article introductions in a single or multi-column layout."
 TPL_ITALIAPA_CATEGORY_VIEW_MASONRY_OPTION="Masonry"
 TPL_ITALIAPA_CATEGORY_VIEW_MASONRY_TITLE="Category Blog (layout: Masonry)"
+TPL_ITALIAPA_CATEGORY_VIEW_NEWS_DESC="Displays article introductions in a single or multi-column layout."
+TPL_ITALIAPA_CATEGORY_VIEW_NEWS_OPTION="News"
+TPL_ITALIAPA_CATEGORY_VIEW_NEWS_TITLE="Category Blog (layout: News)"
 TPL_ITALIAPA_FEATURED_VIEW_FOCUS_DESC="Displays article introductions in a single or multi-column layout for featured articles from all categories."
 TPL_ITALIAPA_FEATURED_VIEW_FOCUS_OPTION="Focus"
 TPL_ITALIAPA_FEATURED_VIEW_FOCUS_TITLE="Featured Articles (layout: Focus)"
