--- a/language/it-IT/it-IT.tpl_italiapa.sys.ini
+++ b/language/it-IT/it-IT.tpl_italiapa.sys.ini
@@ -14,7 +14,7 @@ TPL_ITALIAPA_CATEGORY_VIEW_MASONRY_OPTION="Masonry"
 TPL_ITALIAPA_CATEGORY_VIEW_MASONRY_TITLE="Categoria blog (layout: Masonry)"
 TPL_ITALIAPA_CATEGORY_VIEW_NEWS_DESC="Visualizza le introduzioni degli articoli con un layout a singola o multi-colonna."
 TPL_ITALIAPA_CATEGORY_VIEW_NEWS_OPTION="Masonry"
-TPL_ITALIAPA_CATEGORY_VIEW_NEWS_TITLE="Categoria blog (layout: Masonry)"
+TPL_ITALIAPA_CATEGORY_VIEW_NEWS_TITLE="Categoria blog (layout: News)"
 TPL_ITALIAPA_FEATURED_VIEW_FOCUS_DESC="Visualizza le introduzioni degli articoli in evidenza di tutte le categorie con un layout a singola o multi-colonna. "
 TPL_ITALIAPA_FEATURED_VIEW_FOCUS_OPTION="Focus"
 TPL_ITALIAPA_FEATURED_VIEW_FOCUS_TITLE="Articoli in evidenza di tutte le categorie (layout: Focus)"
