--- a/language/en-GB/en-GB.tpl_italiapa.ini
+++ b/language/en-GB/en-GB.tpl_italiapa.ini
@@ -29,3 +29,5 @@ TPL_ITALIAPA_SCHEMA_GOVERNMENTORGANIZATION="Government Organization"
 TPL_ITALIAPA_SCHEMA_ORGANIZATION_DESC=""
 TPL_ITALIAPA_SCHEMA_ORGANIZATION_LABEL="Organization type"
 TPL_ITALIAPA_SCHEMA_ORGANIZATION="Organization"
+TPL_ITALIAPA_SOURCE="Source"
+
