--- a/language/it-IT/it-IT.tpl_italiapa.ini
+++ b/language/it-IT/it-IT.tpl_italiapa.ini
@@ -28,3 +28,4 @@ TPL_ITALIAPA_SCHEMA_GOVERNMENTORGANIZATION="Government Organization"
 TPL_ITALIAPA_SCHEMA_ORGANIZATION_DESC=""
 TPL_ITALIAPA_SCHEMA_ORGANIZATION_LABEL="Tipo di organizzazione"
 TPL_ITALIAPA_SCHEMA_ORGANIZATION="Organization"
+TPL_ITALIAPA_SOURCE="Fonte"
