--- a/language/it-IT/it-IT.tpl_italiapa.ini
+++ b/language/it-IT/it-IT.tpl_italiapa.ini
@@ -3,6 +3,9 @@
 ; License GNU General Public License version 3 or later; see LICENSE
 ; Note : All ini files need to be saved as UTF-8
 
+TPL_ITALIAPA_BUTTONS_REPORT="Report"
+TPL_ITALIAPA_BUTTONS_CSV="CSV"
+TPL_ITALIAPA_BUTTONS_CLOSE="Chiudi"
 TPL_ITALIAPA_DEBUG_FILENAME_DESC="The name of the file that stores current log messages."
 TPL_ITALIAPA_DEBUG_FILENAME_LABEL="Filename"
 TPL_ITALIAPA_DEBUG_HEADROOM_DESC="Nascondi l'header quando non serve."
