top header links

--- a/language/en-GB/en-GB.tpl_italiapa.ini
+++ b/language/en-GB/en-GB.tpl_italiapa.ini
@@ -14,10 +14,8 @@ TPL_ITALIAPA_DEBUG_PHPCONSOLE_DESC=""
 TPL_ITALIAPA_DEBUG_PHPCONSOLE_LABEL="PHP Console"
 TPL_ITALIAPA_DEBUG_SYSTEM_DESC="If enabled, diagnostic information will be saved."
 TPL_ITALIAPA_DEBUG_SYSTEM_LABEL="Debug"
-TPL_ITALIAPA_FIELD_AFFERENTE_LABEL_DESC="Eventuale nome amministrazione afferente"
-TPL_ITALIAPA_FIELD_AFFERENTE_LABEL="Amministrazione afferente"
-TPL_ITALIAPA_FIELD_AFFERENTE_LINK_LABEL_DESC="Eventuale link amministrazione afferente"
-TPL_ITALIAPA_FIELD_AFFERENTE_LINK_LABEL="Link"
+TPL_ITALIAPA_FIELD_LINKS_DESC=""
+TPL_ITALIAPA_FIELD_LINKS_LABEL="Links"
 TPL_ITALIAPA_FIELD_LOGO_DESC="Image 76x76"
 TPL_ITALIAPA_FIELD_LOGO_LABEL="Logo"
 TPL_ITALIAPA_FIELD_SUBTITLE_DESC=""
@@ -25,6 +23,12 @@ TPL_ITALIAPA_FIELD_SUBTITLE_LABEL="Subtitle"
 TPL_ITALIAPA_HEADING_AUTHOR="Author"
 TPL_ITALIAPA_HEADING_DATE="Date"
 TPL_ITALIAPA_HEADING_HITS="Hits"
+TPL_ITALIAPA_LINK_HREF_DESC=""
+TPL_ITALIAPA_LINK_HREF_LABEL="URL"
+TPL_ITALIAPA_LINK_SHORT_DESC=""
+TPL_ITALIAPA_LINK_SHORT_LABEL="Short title"
+TPL_ITALIAPA_LINK_TITLE_DESC=""
+TPL_ITALIAPA_LINK_TITLE_LABEL="Title"
 TPL_ITALIAPA_MICRODATA_LABEL="Microdata"
 TPL_ITALIAPA_PAGE="Page"
 TPL_ITALIAPA_SCHEMA_EDUCATIONALORGANIZATION="Educational Organization"
@@ -32,5 +36,3 @@ TPL_ITALIAPA_SCHEMA_GOVERNMENTORGANIZATION="Government Organization"
 TPL_ITALIAPA_SCHEMA_ORGANIZATION_DESC=""
 TPL_ITALIAPA_SCHEMA_ORGANIZATION_LABEL="Organization type"
 TPL_ITALIAPA_SCHEMA_ORGANIZATION="Organization"
-TPL_ITALIAPA_SOURCE="Source"
-
