--- a/language/it-IT/it-IT.tpl_italiapa.ini
+++ b/language/it-IT/it-IT.tpl_italiapa.ini
@@ -14,10 +14,8 @@ TPL_ITALIAPA_DEBUG_PHPCONSOLE_DESC=""
 TPL_ITALIAPA_DEBUG_PHPCONSOLE_LABEL="PHP Console"
 TPL_ITALIAPA_DEBUG_SYSTEM_DESC="If enabled, diagnostic information will be saved."
 TPL_ITALIAPA_DEBUG_SYSTEM_LABEL="Debug"
-TPL_ITALIAPA_FIELD_AFFERENTE_LABEL_DESC="Eventuale nome amministrazione afferente"
-TPL_ITALIAPA_FIELD_AFFERENTE_LABEL="Amministrazione afferente"
-TPL_ITALIAPA_FIELD_AFFERENTE_LINK_LABEL_DESC="Eventuale link amministrazione afferente"
-TPL_ITALIAPA_FIELD_AFFERENTE_LINK_LABEL="Link"
+TPL_ITALIAPA_FIELD_LINKS_DESC=""
+TPL_ITALIAPA_FIELD_LINKS_LABEL="Link"
 TPL_ITALIAPA_FIELD_LOGO_DESC="Immagine 76x76"
 TPL_ITALIAPA_FIELD_LOGO_LABEL="Logo"
 TPL_ITALIAPA_FIELD_SUBTITLE_DESC="Eventuale sottotitolo"
@@ -25,10 +23,15 @@ TPL_ITALIAPA_FIELD_SUBTITLE_LABEL="Sottotitolo"
 TPL_ITALIAPA_HEADING_AUTHOR="Autore"
 TPL_ITALIAPA_HEADING_DATE="Data"
 TPL_ITALIAPA_HEADING_HITS="Visite"
+TPL_ITALIAPA_LINK_HREF_DESC=""
+TPL_ITALIAPA_LINK_HREF_LABEL="URL"
+TPL_ITALIAPA_LINK_SHORT_DESC=""
+TPL_ITALIAPA_LINK_SHORT_LABEL="Titolo breve"
+TPL_ITALIAPA_LINK_TITLE_DESC=""
+TPL_ITALIAPA_LINK_TITLE_LABEL="Titolo"
 TPL_ITALIAPA_MICRODATA_LABEL="Microdata"
 TPL_ITALIAPA_SCHEMA_EDUCATIONALORGANIZATION="Educational Organization"
 TPL_ITALIAPA_SCHEMA_GOVERNMENTORGANIZATION="Government Organization"
 TPL_ITALIAPA_SCHEMA_ORGANIZATION_DESC=""
 TPL_ITALIAPA_SCHEMA_ORGANIZATION_LABEL="Tipo di organizzazione"
 TPL_ITALIAPA_SCHEMA_ORGANIZATION="Organization"
-TPL_ITALIAPA_SOURCE="Fonte"
