--- a/language/it-IT/it-IT.mod_schemaorg.ini
+++ b/language/it-IT/it-IT.mod_schemaorg.ini
@@ -36,3 +36,6 @@ MOD_SCHEMAORG_DEBUG_FILENAME_LABEL="Filename"
 MOD_SCHEMAORG_DEBUG_FILENAME_DESC="The name of the file that stores current log messages."
 MOD_SCHEMAORG_DEBUG_PHPCONSOLE_DESC=""
 MOD_SCHEMAORG_DEBUG_PHPCONSOLE_LABEL="PHP Console"
+
+MOD_SCHEMAORG_FIELD_PREPARE_CONTENT_DESC="Consente di utilizzare i plugin nei contenuti di Joomla."
+MOD_SCHEMAORG_FIELD_PREPARE_CONTENT_LABEL="Attiva codice plugin"
