--- a/language/it-IT/it-IT.mod_schemaorg.sys.ini
+++ b/language/it-IT/it-IT.mod_schemaorg.sys.ini
@@ -1,4 +1,4 @@
-; Template Italia PA - Schema.org Module 3.7.1
+; Template ItaliaPA - Schema.org Module
 ; Copyright (C) 2017 Helios Ciancio. All rights reserved.
 ; License GNU General Public License version 3 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
