--- a/language/it-IT/it-IT.tpl_italiapa.ini
+++ b/language/it-IT/it-IT.tpl_italiapa.ini
@@ -1,5 +1,5 @@
 ; Template ItaliaPA
-; Copyright (C) 2017 Helios Ciancio. All rights reserved.
+; Copyright (C) 2017, 2018 Helios Ciancio. All rights reserved.
 ; License GNU General Public License version 3 or later; see LICENSE
 ; Note : All ini files need to be saved as UTF-8
 
@@ -14,6 +14,8 @@ TPL_ITALIAPA_DEBUG_PHPCONSOLE_DESC=""
 TPL_ITALIAPA_DEBUG_PHPCONSOLE_LABEL="PHP Console"
 TPL_ITALIAPA_DEBUG_SYSTEM_DESC="If enabled, diagnostic information will be saved."
 TPL_ITALIAPA_DEBUG_SYSTEM_LABEL="Debug"
+TPL_ITALIAPA_FIELD_CSS_DESC="Usa questa textarea per aggiungere il tuo CSS personalizzato per sovrascrivere lo stile del modello nativo (le modifiche ai file CSS del template sono <strong>scoraggiate</strong>)."
+TPL_ITALIAPA_FIELD_CSS_LABEL="CSS personalizzato"
 TPL_ITALIAPA_FIELD_LINKS_DESC=""
 TPL_ITALIAPA_FIELD_LINKS_LABEL="Link"
 TPL_ITALIAPA_FIELD_LOGO_DESC="Immagine 76x76"
