--- a/language/en-GB/en-GB.tpl_italiapa.ini
+++ b/language/en-GB/en-GB.tpl_italiapa.ini
@@ -1,5 +1,5 @@
 ; Template ItaliaPA
-; Copyright (C) 2017 Helios Ciancio. All rights reserved.
+; Copyright (C) 2017, 2018 Helios Ciancio. All rights reserved.
 ; License GNU General Public License version 3 or later; see LICENSE
 ; Note : All ini files need to be saved as UTF-8
 
@@ -14,6 +14,8 @@ TPL_ITALIAPA_DEBUG_PHPCONSOLE_DESC=""
 TPL_ITALIAPA_DEBUG_PHPCONSOLE_LABEL="PHP Console"
 TPL_ITALIAPA_DEBUG_SYSTEM_DESC="If enabled, diagnostic information will be saved."
 TPL_ITALIAPA_DEBUG_SYSTEM_LABEL="Debug"
+TPL_ITALIAPA_FIELD_CSS_DESC="Use this textarea to add your custom CSS and override the native template style (we <strong>discourage</strong> modifications to the template's CSS files)."
+TPL_ITALIAPA_FIELD_CSS_LABEL="Your Custom CSS"
 TPL_ITALIAPA_FIELD_LINKS_DESC=""
 TPL_ITALIAPA_FIELD_LINKS_LABEL="Links"
 TPL_ITALIAPA_FIELD_LOGO_DESC="Image 76x76"
