--- a/language/en-GB/en-GB.tpl_italiapa.ini
+++ b/language/en-GB/en-GB.tpl_italiapa.ini
@@ -25,6 +25,7 @@ TPL_ITALIAPA_FIELD_SUBTITLE_LABEL="Subtitle"
 TPL_ITALIAPA_HEADING_AUTHOR="Author"
 TPL_ITALIAPA_HEADING_DATE="Date"
 TPL_ITALIAPA_HEADING_HITS="Hits"
+TPL_ITALIAPA_JAGDPR_CUSTOM="Data recorded by 3rd party services"
 TPL_ITALIAPA_LINK_HREF_DESC=""
 TPL_ITALIAPA_LINK_HREF_LABEL="URL"
 TPL_ITALIAPA_LINK_SHORT_DESC=""
