--- a/language/it-IT/it-IT.tpl_italiapa.ini
+++ b/language/it-IT/it-IT.tpl_italiapa.ini
@@ -25,6 +25,7 @@ TPL_ITALIAPA_FIELD_SUBTITLE_LABEL="Sottotitolo"
 TPL_ITALIAPA_HEADING_AUTHOR="Autore"
 TPL_ITALIAPA_HEADING_DATE="Data"
 TPL_ITALIAPA_HEADING_HITS="Visite"
+TPL_ITALIAPA_JAGDPR_CUSTOM="Dati registrati da servizi di terze parti"
 TPL_ITALIAPA_LINK_HREF_DESC=""
 TPL_ITALIAPA_LINK_HREF_LABEL="URL"
 TPL_ITALIAPA_LINK_SHORT_DESC=""
