--- a/language/it-IT/it-IT.mod_schemaorg.sys.ini
+++ b/language/it-IT/it-IT.mod_schemaorg.sys.ini
@@ -4,4 +4,4 @@
 ; Note : All ini files need to be saved as UTF-8
 
 MOD_SCHEMAORG="Schema.org"
-MOD_SCHEMAORG_XML_DESCRIPTION="The module displays Schema.org info."
+MOD_SCHEMAORG_XML_DESCRIPTION="Questo modulo visualizza le informazioni Schema.org."
