--- a/language/it-IT/it-IT.mod_cookiebar.ini
+++ b/language/it-IT/it-IT.mod_cookiebar.ini
@@ -1,14 +1,14 @@
 ; Template ItaliaPA - Cookiebar Module
-; Copyright (C) 2017 Helios Ciancio. All rights reserved.
+; Copyright (C) 2017, 2018 Helios Ciancio. All rights reserved.
 ; License GNU General Public License version 3 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
 MOD_COOKIEBAR="Cookie Bar"
 MOD_COOKIEBAR_ACCEPT="Accetto"
-MOD_COOKIEBAR_DEBUG_SYSTEM_DESC="If enabled, diagnostic information will be saved."
+MOD_COOKIEBAR_DEBUG_SYSTEM_DESC="Se abilitato, saranno salvate le informazioni di diagnostica."
 MOD_COOKIEBAR_DEBUG_SYSTEM_LABEL="Debug"
-MOD_COOKIEBAR_DEBUG_FILENAME_DESC="The name of the file that stores current log messages."
-MOD_COOKIEBAR_DEBUG_FILENAME_LABEL="Filename"
+MOD_COOKIEBAR_DEBUG_FILENAME_DESC="Il nome del file in cui sono salvati i messaggi di log attuali."
+MOD_COOKIEBAR_DEBUG_FILENAME_LABEL="Nome del file"
 MOD_COOKIEBAR_DEBUG_PHPCONSOLE_DESC=""
 MOD_COOKIEBAR_DEBUG_PHPCONSOLE_LABEL="PHP Console"
 MOD_COOKIEBAR_FIELD_TEXT_LABEL="Text"
