--- a/language/it-IT/it-IT.tpl_italiapa.ini
+++ b/language/it-IT/it-IT.tpl_italiapa.ini
@@ -6,7 +6,7 @@
 TPL_ITALIAPA_BUTTONS_REPORT="Report"
 TPL_ITALIAPA_BUTTONS_CSV="CSV"
 TPL_ITALIAPA_BUTTONS_CLOSE="Chiudi"
-TPL_ITALIAPA_DEBUG_FILENAME_DESC="Il nome del file che salva gli attuali messaggi di log."
+TPL_ITALIAPA_DEBUG_FILENAME_DESC="Il nome del file in cui sono salvati i messaggi di log attuali."
 TPL_ITALIAPA_DEBUG_FILENAME_LABEL="Nome del file"
 TPL_ITALIAPA_DEBUG_HEADROOM_DESC="Nascondi l'header quando non serve."
 TPL_ITALIAPA_DEBUG_HEADROOM_LABEL="Headroom"
