--- a/language/it-IT/it-IT.mod_carousel.ini
+++ b/language/it-IT/it-IT.mod_carousel.ini
@@ -4,14 +4,14 @@
 ; Note : All ini files need to be saved as UTF-8
 
 MOD_CAROUSEL="Carousel"
-MOD_CAROUSEL_DEBUG_FILENAME_DESC="Il nome del file dove salvare i messaggi di debug."
-MOD_CAROUSEL_DEBUG_FILENAME_LABEL="Filename"
+MOD_CAROUSEL_DEBUG_FILENAME_DESC="Il nome del file in cui sono salvati i messaggi di log attuali."
+MOD_CAROUSEL_DEBUG_FILENAME_LABEL="Nome del file"
 MOD_CAROUSEL_DEBUG_LABEL="Debug"
 MOD_CAROUSEL_DEBUG_PHPCONSOLE_DESC=""
 MOD_CAROUSEL_DEBUG_PHPCONSOLE_LABEL="PHP Console"
-MOD_CAROUSEL_DEBUG_SYSTEM_DESC="Se abilitato, verranno prodotte informazioni diagnostiche su file."
+MOD_CAROUSEL_DEBUG_SYSTEM_DESC="Se abilitato, saranno salvate le informazioni di diagnostica."
 MOD_CAROUSEL_DEBUG_SYSTEM_LABEL="Debug"
-MOD_CAROUSEL_IMAGE_CAPTION_LABEL="Caption"
+MOD_CAROUSEL_IMAGE_CAPTION_LABEL="Titolo"
 MOD_CAROUSEL_IMAGE_DESCRIPTION_LABEL="Descrizione"
 MOD_CAROUSEL_IMAGE_LABEL="Immagine"
 MOD_CAROUSEL_IMAGE_LINK_BROWSERNAV_DESC="Target della finestra del browser quando si clicca sul link."
