--- a/language/it-IT/it-IT.mod_schemaorg.ini
+++ b/language/it-IT/it-IT.mod_schemaorg.ini
@@ -31,9 +31,9 @@ MOD_SCHEMAORG_POSTALADDRESS_LABEL="PostalAddress"
 MOD_SCHEMAORG_POSTALADDRESS_DESC="The mailing address."
 
 MOD_SCHEMAORG_DEBUG_SYSTEM_LABEL="Debug"
-MOD_SCHEMAORG_DEBUG_SYSTEM_DESC="If enabled, diagnostic information will be saved."
-MOD_SCHEMAORG_DEBUG_FILENAME_LABEL="Filename"
-MOD_SCHEMAORG_DEBUG_FILENAME_DESC="The name of the file that stores current log messages."
+MOD_SCHEMAORG_DEBUG_SYSTEM_DESC="Se abilitato, saranno salvate le informazioni di diagnostica."
+MOD_SCHEMAORG_DEBUG_FILENAME_LABEL="Nome del file"
+MOD_SCHEMAORG_DEBUG_FILENAME_DESC="Il nome del file in cui sono salvati i messaggi di log attuali."
 MOD_SCHEMAORG_DEBUG_PHPCONSOLE_DESC=""
 MOD_SCHEMAORG_DEBUG_PHPCONSOLE_LABEL="PHP Console"
 
