--- a/language/en-GB/en-GB.mod_carousel.ini
+++ b/language/en-GB/en-GB.mod_carousel.ini
@@ -4,6 +4,8 @@
 ; Note : All ini files need to be saved as UTF-8
 
 MOD_CAROUSEL="Carousel"
+MOD_CAROUSEL_AUTO_SLIDING_DESC=""
+MOD_CAROUSEL_AUTO_SLIDING_LABEL="Auto sliding"
 MOD_CAROUSEL_DEBUG_FILENAME_DESC="The name of the file that stores current log messages."
 MOD_CAROUSEL_DEBUG_FILENAME_LABEL="Filename"
 MOD_CAROUSEL_DEBUG_LABEL="Debug"
@@ -11,6 +13,7 @@ MOD_CAROUSEL_DEBUG_PHPCONSOLE_DESC=""
 MOD_CAROUSEL_DEBUG_PHPCONSOLE_LABEL="PHP Console"
 MOD_CAROUSEL_DEBUG_SYSTEM_DESC="If enabled, diagnostic information will be saved."
 MOD_CAROUSEL_DEBUG_SYSTEM_LABEL="Debug"
+MOD_CAROUSEL_ICON_LABEL="Icon"
 MOD_CAROUSEL_IMAGE_CAPTION_LABEL="Caption"
 MOD_CAROUSEL_IMAGE_DESCRIPTION_LABEL="Image Description"
 MOD_CAROUSEL_IMAGE_LABEL="Image"
@@ -18,6 +21,10 @@ MOD_CAROUSEL_IMAGE_LINK_BROWSERNAV_DESC="Target browser window when the link is 
 MOD_CAROUSEL_IMAGE_LINK_BROWSERNAV_LABEL="URL Target Window"
 MOD_CAROUSEL_IMAGE_LINK_LABEL="Link"
 MOD_CAROUSEL_IMAGE_TITLE_LABEL="Image Title"
+MOD_CAROUSEL_SHOW_CONTROLS_DESC=""
+MOD_CAROUSEL_SHOW_CONTROLS_LABEL="Show controls"
+MOD_CAROUSEL_SHOW_INDICATORS_DESC=""
+MOD_CAROUSEL_SHOW_INDICATORS_LABEL="Show indicators"
 MOD_CAROUSEL_SLIDE_INFO="You can use arrow keys to navigate slides"
 MOD_CAROUSEL_SLIDE_NEXT="Go to the next slide"
 MOD_CAROUSEL_SLIDE_PREV="Go to the prevoius slide"
