--- a/language/it-IT/it-IT.mod_carousel.ini
+++ b/language/it-IT/it-IT.mod_carousel.ini
@@ -1,9 +1,13 @@
-; Template ItaliaPA - Carousel Module
-; Copyright (C) 2017 Helios Ciancio. All rights reserved.
+﻿; Template ItaliaPA - Carousel Module
+; Copyright (C) 2017 - 2019 Helios Ciancio. All rights reserved.
 ; License GNU General Public License version 3 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
 MOD_CAROUSEL="Carousel"
+MOD_CAROUSEL_AUTO_SLIDING_DESC=""
+MOD_CAROUSEL_AUTO_SLIDING_LABEL="Scorrimento automatico"
+MOD_CAROUSEL_COUNT_LABEL="# di immagini"
+MOD_CAROUSEL_COUNT_DESC="Il numero di immagini da visualizzare in ogni diapositiva (il default è 1)."
 MOD_CAROUSEL_DEBUG_FILENAME_DESC="Il nome del file in cui sono salvati i messaggi di log attuali."
 MOD_CAROUSEL_DEBUG_FILENAME_LABEL="Nome del file"
 MOD_CAROUSEL_DEBUG_LABEL="Debug"
@@ -11,13 +15,20 @@ MOD_CAROUSEL_DEBUG_PHPCONSOLE_DESC=""
 MOD_CAROUSEL_DEBUG_PHPCONSOLE_LABEL="PHP Console"
 MOD_CAROUSEL_DEBUG_SYSTEM_DESC="Se abilitato, saranno salvate le informazioni di diagnostica."
 MOD_CAROUSEL_DEBUG_SYSTEM_LABEL="Debug"
-MOD_CAROUSEL_IMAGE_CAPTION_LABEL="Titolo"
+MOD_CAROUSEL_ICON_LABEL="Icona"
+MOD_CAROUSEL_IMAGE_CAPTION_LABEL="Caption"
 MOD_CAROUSEL_IMAGE_DESCRIPTION_LABEL="Descrizione"
 MOD_CAROUSEL_IMAGE_LABEL="Immagine"
 MOD_CAROUSEL_IMAGE_LINK_BROWSERNAV_DESC="Target della finestra del browser quando si clicca sul link."
 MOD_CAROUSEL_IMAGE_LINK_BROWSERNAV_LABEL="Target finestra Link"
 MOD_CAROUSEL_IMAGE_LINK_LABEL="Link"
 MOD_CAROUSEL_IMAGE_TITLE_LABEL="Image Titolo"
+MOD_CAROUSEL_INTERVAL_DESC="Specifica il ritardo (in millisecondi) tra due diapositive."
+MOD_CAROUSEL_INTERVAL_LABEL="Intervallo"
+MOD_CAROUSEL_SHOW_CONTROLS_DESC=""
+MOD_CAROUSEL_SHOW_CONTROLS_LABEL="Mostra controlli"
+MOD_CAROUSEL_SHOW_INDICATORS_DESC=""
+MOD_CAROUSEL_SHOW_INDICATORS_LABEL="Mostra indicatori"
 MOD_CAROUSEL_SLIDE_INFO="È possibile navigare le slide utilizzando i tasti freccia"
 MOD_CAROUSEL_SLIDE_NEXT="Vai alla slide successiva"
 MOD_CAROUSEL_SLIDE_PREV="Vai alla slide precedente"
