--- a/language/en-GB/en-GB.mod_carousel.ini
+++ b/language/en-GB/en-GB.mod_carousel.ini
@@ -1,9 +1,13 @@
 ; Template ItaliaPA - Carousel Module
-; Copyright (C) 2017 Helios Ciancio. All rights reserved.
+; Copyright (C) 2017 - 2019 Helios Ciancio. All rights reserved.
 ; License GNU General Public License version 3 or later; see LICENSE
 ; Note : All ini files need to be saved as UTF-8
 
 MOD_CAROUSEL="Carousel"
+MOD_CAROUSEL_AUTO_SLIDING_DESC=""
+MOD_CAROUSEL_AUTO_SLIDING_LABEL="Auto sliding"
+MOD_CAROUSEL_COUNT_LABEL="# of Images"
+MOD_CAROUSEL_COUNT_DESC="The number of images to display on each slide (the default is 1)."
 MOD_CAROUSEL_DEBUG_FILENAME_DESC="The name of the file that stores current log messages."
 MOD_CAROUSEL_DEBUG_FILENAME_LABEL="Filename"
 MOD_CAROUSEL_DEBUG_LABEL="Debug"
@@ -11,6 +15,7 @@ MOD_CAROUSEL_DEBUG_PHPCONSOLE_DESC=""
 MOD_CAROUSEL_DEBUG_PHPCONSOLE_LABEL="PHP Console"
 MOD_CAROUSEL_DEBUG_SYSTEM_DESC="If enabled, diagnostic information will be saved."
 MOD_CAROUSEL_DEBUG_SYSTEM_LABEL="Debug"
+MOD_CAROUSEL_ICON_LABEL="Icon"
 MOD_CAROUSEL_IMAGE_CAPTION_LABEL="Caption"
 MOD_CAROUSEL_IMAGE_DESCRIPTION_LABEL="Image Description"
 MOD_CAROUSEL_IMAGE_LABEL="Image"
@@ -18,8 +23,13 @@ MOD_CAROUSEL_IMAGE_LINK_BROWSERNAV_DESC="Target browser window when the link is 
 MOD_CAROUSEL_IMAGE_LINK_BROWSERNAV_LABEL="URL Target Window"
 MOD_CAROUSEL_IMAGE_LINK_LABEL="Link"
 MOD_CAROUSEL_IMAGE_TITLE_LABEL="Image Title"
+MOD_CAROUSEL_INTERVAL_DESC="Specifies the delay (in milliseconds) between each slide."
+MOD_CAROUSEL_INTERVAL_LABEL="Interval"
+MOD_CAROUSEL_SHOW_CONTROLS_DESC=""
+MOD_CAROUSEL_SHOW_CONTROLS_LABEL="Show controls"
+MOD_CAROUSEL_SHOW_INDICATORS_DESC=""
+MOD_CAROUSEL_SHOW_INDICATORS_LABEL="Show indicators"
 MOD_CAROUSEL_SLIDE_INFO="You can use arrow keys to navigate slides"
 MOD_CAROUSEL_SLIDE_NEXT="Go to the next slide"
 MOD_CAROUSEL_SLIDE_PREV="Go to the prevoius slide"
 MOD_CAROUSEL_XML_DESCRIPTION="The module displays images in carousel format."
-
