--- a/language/en-GB/en-GB.mod_carousel.ini
+++ b/language/en-GB/en-GB.mod_carousel.ini
@@ -4,7 +4,7 @@
 ; Note : All ini files need to be saved as UTF-8
 
 MOD_CAROUSEL="Carousel"
-MOD_CAROUSEL_AUTO_SLIDING_DESC=""
+MOD_CAROUSEL_AUTO_SLIDING_DESC="If enabled, the carousel is animated starting at page load."
 MOD_CAROUSEL_AUTO_SLIDING_LABEL="Auto sliding"
 MOD_CAROUSEL_COUNT_LABEL="# of Images"
 MOD_CAROUSEL_COUNT_DESC="The number of images to display on each slide (the default is 1)."
@@ -25,9 +25,9 @@ MOD_CAROUSEL_IMAGE_LINK_LABEL="Link"
 MOD_CAROUSEL_IMAGE_TITLE_LABEL="Image Title"
 MOD_CAROUSEL_INTERVAL_DESC="Specifies the delay (in milliseconds) between each slide."
 MOD_CAROUSEL_INTERVAL_LABEL="Interval"
-MOD_CAROUSEL_SHOW_CONTROLS_DESC=""
+MOD_CAROUSEL_SHOW_CONTROLS_DESC="Adds a left button and a right one to the carousel, which allow the user to go back and forth between the slides."
 MOD_CAROUSEL_SHOW_CONTROLS_LABEL="Show controls"
-MOD_CAROUSEL_SHOW_INDICATORS_DESC=""
+MOD_CAROUSEL_SHOW_INDICATORS_DESC="Adds indicators for the carousel. These are the little dots at the bottom of each slide (which indicates how many slides there are in the carousel, and which slide the user are currently viewing)."
 MOD_CAROUSEL_SHOW_INDICATORS_LABEL="Show indicators"
 MOD_CAROUSEL_SLIDE_INFO="You can use arrow keys to navigate slides"
 MOD_CAROUSEL_SLIDE_NEXT="Go to the next slide"
