--- a/language/it-IT/it-IT.mod_carousel.ini
+++ b/language/it-IT/it-IT.mod_carousel.ini
@@ -4,7 +4,7 @@
 ; Note : All ini files need to be saved as UTF-8
 
 MOD_CAROUSEL="Carousel"
-MOD_CAROUSEL_AUTO_SLIDING_DESC=""
+MOD_CAROUSEL_AUTO_SLIDING_DESC="Se abilitato, il carousel sarà animato al caricamento della pagina."
 MOD_CAROUSEL_AUTO_SLIDING_LABEL="Scorrimento automatico"
 MOD_CAROUSEL_COUNT_LABEL="# di immagini"
 MOD_CAROUSEL_COUNT_DESC="Il numero di immagini da visualizzare in ogni diapositiva (il default è 1)."
@@ -25,9 +25,9 @@ MOD_CAROUSEL_IMAGE_LINK_LABEL="Link"
 MOD_CAROUSEL_IMAGE_TITLE_LABEL="Image Titolo"
 MOD_CAROUSEL_INTERVAL_DESC="Specifica il ritardo (in millisecondi) tra due diapositive."
 MOD_CAROUSEL_INTERVAL_LABEL="Intervallo"
-MOD_CAROUSEL_SHOW_CONTROLS_DESC=""
+MOD_CAROUSEL_SHOW_CONTROLS_DESC="Aggiunge un pulsante a sinistra e uno a destra al carosello, che consentono all'utente di andare avanti e indietro tra le diapositive."
 MOD_CAROUSEL_SHOW_CONTROLS_LABEL="Mostra controlli"
-MOD_CAROUSEL_SHOW_INDICATORS_DESC=""
+MOD_CAROUSEL_SHOW_INDICATORS_DESC="Aggiunge indicatori per il carousel. Questi sono i puntini nella parte inferiore di ogni diapositiva (che indica il numero di diapositive presenti nel carousel e che l'utente sta visualizzando attualmente."
 MOD_CAROUSEL_SHOW_INDICATORS_LABEL="Mostra indicatori"
 MOD_CAROUSEL_SLIDE_INFO="È possibile navigare le slide utilizzando i tasti freccia"
 MOD_CAROUSEL_SLIDE_NEXT="Vai alla slide successiva"
