--- a/language/en-GB/en-GB.tpl_italiapa.ini
+++ b/language/en-GB/en-GB.tpl_italiapa.ini
@@ -1,5 +1,5 @@
 ; Template ItaliaPA
-; Copyright (C) 2017, 2018 Helios Ciancio. All rights reserved.
+; Copyright (C) 2017 - 2019 Helios Ciancio. All rights reserved.
 ; License GNU General Public License version 3 or later; see LICENSE
 ; Note : All ini files need to be saved as UTF-8
 
@@ -32,6 +32,7 @@ TPL_ITALIAPA_LINK_SHORT_LABEL="Short title"
 TPL_ITALIAPA_LINK_TITLE_DESC=""
 TPL_ITALIAPA_LINK_TITLE_LABEL="Title"
 TPL_ITALIAPA_MICRODATA_LABEL="Microdata"
+TPL_ITALIAPA_OPERATION_SUCCESS="Operation performed successfully"
 TPL_ITALIAPA_PAGE="Page"
 TPL_ITALIAPA_SCHEMA_EDUCATIONALORGANIZATION="Educational Organization"
 TPL_ITALIAPA_SCHEMA_GOVERNMENTORGANIZATION="Government Organization"
