--- a/language/it-IT/it-IT.tpl_italiapa.ini
+++ b/language/it-IT/it-IT.tpl_italiapa.ini
@@ -38,3 +38,22 @@ TPL_ITALIAPA_SCHEMA_ORGANIZATION_DESC=""
 TPL_ITALIAPA_SCHEMA_ORGANIZATION_LABEL="Tipo di organizzazione"
 TPL_ITALIAPA_SCHEMA_ORGANIZATION="Organizzazione"
 TPL_ITALIAPA_SOURCE="Fonte"
+TPL_ITALIAPA_THEME_BLUE="Blu"
+TPL_ITALIAPA_THEME_CYAN="Ciano"
+TPL_ITALIAPA_THEME_DARK="Scuro"
+TPL_ITALIAPA_THEME_DESC="Colore del template"
+TPL_ITALIAPA_THEME_GREEN="Verde"
+TPL_ITALIAPA_THEME_GREEN-ACCESSIBLE="Verde accessibile"
+TPL_ITALIAPA_THEME_INDIGO="Indaco"
+TPL_ITALIAPA_THEME_ITALIA="Italia"
+TPL_ITALIAPA_THEME_LABEL="Tema"
+TPL_ITALIAPA_THEME_LIGHT="Chiaro"
+TPL_ITALIAPA_THEME_ORANGE="Arancione"
+TPL_ITALIAPA_THEME_ORANGE-ACCESSIBLE="Arancione accessibile"
+TPL_ITALIAPA_THEME_PINK="Rosa"
+TPL_ITALIAPA_THEME_PURPLE="Viola"
+TPL_ITALIAPA_THEME_RED="Rosso"
+TPL_ITALIAPA_THEME_RED-ACCESSIBLE="Rosso accessibile"
+TPL_ITALIAPA_THEME_TEAL="Verde acqua"
+TPL_ITALIAPA_THEME_YELLOW="Giallo"
+TPL_ITALIAPA_THEME_YELLOW-ACCESSIBLE="Giallo accessibile"
