--- a/language/it-IT/it-IT.tpl_italiapa.ini
+++ b/language/it-IT/it-IT.tpl_italiapa.ini
@@ -43,17 +43,18 @@ TPL_ITALIAPA_SOURCE="Fonte"
 TPL_ITALIAPA_THEME_BLUE="Blu"
 TPL_ITALIAPA_THEME_CYAN="Ciano"
 TPL_ITALIAPA_THEME_DARK="Scuro"
+TPL_ITALIAPA_THEME_DEFAULT="Default"
 TPL_ITALIAPA_THEME_GREEN="Verde"
-TPL_ITALIAPA_THEME_GREEN-ACCESSIBLE="Verde accessibile"
+TPL_ITALIAPA_THEME_GREENACCESSIBLE="Verde accessibile"
 TPL_ITALIAPA_THEME_INDIGO="Indaco"
 TPL_ITALIAPA_THEME_ITALIA="Italia"
 TPL_ITALIAPA_THEME_LIGHT="Chiaro"
 TPL_ITALIAPA_THEME_ORANGE="Arancione"
-TPL_ITALIAPA_THEME_ORANGE-ACCESSIBLE="Arancione accessibile"
+TPL_ITALIAPA_THEME_ORANGEACCESSIBLE="Arancione accessibile"
 TPL_ITALIAPA_THEME_PINK="Rosa"
 TPL_ITALIAPA_THEME_PURPLE="Viola"
 TPL_ITALIAPA_THEME_RED="Rosso"
-TPL_ITALIAPA_THEME_RED-ACCESSIBLE="Rosso accessibile"
+TPL_ITALIAPA_THEME_REDACCESSIBLE="Rosso accessibile"
 TPL_ITALIAPA_THEME_TEAL="Verde acqua"
 TPL_ITALIAPA_THEME_YELLOW="Giallo"
-TPL_ITALIAPA_THEME_YELLOW-ACCESSIBLE="Giallo accessibile"
+TPL_ITALIAPA_THEME_YELLOWACCESSIBLE="Giallo accessibile"
