--- a/language/en-GB/en-GB.tpl_italiapa.ini
+++ b/language/en-GB/en-GB.tpl_italiapa.ini
@@ -43,17 +43,18 @@ TPL_ITALIAPA_SOURCE="Source"
 TPL_ITALIAPA_THEME_BLUE="Blue"
 TPL_ITALIAPA_THEME_CYAN="Cyan"
 TPL_ITALIAPA_THEME_DARK="Dark"
+TPL_ITALIAPA_THEME_DEFAULT="Default"
 TPL_ITALIAPA_THEME_GREEN="Green"
-TPL_ITALIAPA_THEME_GREEN-ACCESSIBLE="Green Accessible"
+TPL_ITALIAPA_THEME_GREENACCESSIBLE="Green Accessible"
 TPL_ITALIAPA_THEME_INDIGO="Indigo"
 TPL_ITALIAPA_THEME_ITALIA="Italia"
 TPL_ITALIAPA_THEME_LIGHT="Light"
 TPL_ITALIAPA_THEME_ORANGE="Orange"
-TPL_ITALIAPA_THEME_ORANGE-ACCESSIBLE="Orange Accessible"
+TPL_ITALIAPA_THEME_ORANGEACCESSIBLE="Orange Accessible"
 TPL_ITALIAPA_THEME_PINK="Pink"
 TPL_ITALIAPA_THEME_PURPLE="Purple"
 TPL_ITALIAPA_THEME_RED="Red"
-TPL_ITALIAPA_THEME_RED-ACCESSIBLE="Red Accessible"
+TPL_ITALIAPA_THEME_REDACCESSIBLE="Red Accessible"
 TPL_ITALIAPA_THEME_TEAL="Teal"
 TPL_ITALIAPA_THEME_YELLOW="Yellow"
-TPL_ITALIAPA_THEME_YELLOW-ACCESSIBLE="Yellow Accessible"
+TPL_ITALIAPA_THEME_YELLOWACCESSIBLE="Yellow Accessible"
