aggiunta tema squola

--- a/language/en-GB/en-GB.tpl_italiapa.ini
+++ b/language/en-GB/en-GB.tpl_italiapa.ini
@@ -55,6 +55,7 @@ TPL_ITALIAPA_THEME_PINK="Pink"
 TPL_ITALIAPA_THEME_PURPLE="Purple"
 TPL_ITALIAPA_THEME_RED="Red"
 TPL_ITALIAPA_THEME_REDACCESSIBLE="Red Accessible"
+TPL_ITALIAPA_THEME_SCHOOLUNOFFICIAL="School Unofficial"
 TPL_ITALIAPA_THEME_TEAL="Teal"
 TPL_ITALIAPA_THEME_YELLOW="Yellow"
 TPL_ITALIAPA_THEME_YELLOWACCESSIBLE="Yellow Accessible"
