--- a/language/it-IT/it-IT.tpl_italiapa.ini
+++ b/language/it-IT/it-IT.tpl_italiapa.ini
@@ -55,6 +55,7 @@ TPL_ITALIAPA_THEME_PINK="Rosa"
 TPL_ITALIAPA_THEME_PURPLE="Viola"
 TPL_ITALIAPA_THEME_RED="Rosso"
 TPL_ITALIAPA_THEME_REDACCESSIBLE="Rosso accessibile"
+TPL_ITALIAPA_THEME_SCHOOLUNOFFICIAL="Scuola Unofficial"
 TPL_ITALIAPA_THEME_TEAL="Verde acqua"
 TPL_ITALIAPA_THEME_YELLOW="Giallo"
 TPL_ITALIAPA_THEME_YELLOWACCESSIBLE="Giallo accessibile"
