--- a/administrator/language/en-GB/en-GB.plg_content_ipapagebreak.ini
+++ b/administrator/language/en-GB/en-GB.plg_content_ipapagebreak.ini
@@ -3,7 +3,7 @@
 ; License GNU General Public License version 3 or later; see LICENSE
 ; Note : All ini files need to be saved as UTF-8
 
-PLG_CONTENT_IPAPAGEBREAK="Content - Page Break for ItaliaPA Template"
+PLG_CONTENT_IPAPAGEBREAK="Content - Page Break for ItaliaPA"
 PLG_CONTENT_IPAPAGEBREAK_ALL_PAGES=" All Pages"
 PLG_CONTENT_IPAPAGEBREAK_ARTICLE_INDEX="Article Index"
 PLG_CONTENT_IPAPAGEBREAK_NO_TITLE="No title"
