--- a/administrator/language/it-IT/it-IT.plg_content_ipapagebreak.sys.ini
+++ b/administrator/language/it-IT/it-IT.plg_content_ipapagebreak.sys.ini
@@ -3,5 +3,5 @@
 ; License GNU General Public License version 3 or later; see LICENSE
 ; Note : All ini files need to be saved as UTF-8
 
-PLG_CONTENT_IPAPAGEBREAK="Content - Pagebreak for ItaliaPA Template"
+PLG_CONTENT_IPAPAGEBREAK="Content - Page Break for ItaliaPA"
 PLG_CONTENT_IPAPAGEBREAK_XML_DESCRIPTION="Consente la creazione di un articolo impaginato con una tabella dei contenuti. Inserisci l'interruzione di pagina con l'utilizzo del pulsante Pagebreak che si trova nella parte inferiore del testo di un articolo. Il Pagebreak verrà visualizzato nella finestra del testo come una singola linea orizzontale. <br /> Il testo visualizzato dipenderà dalle opzioni scelte, cioè il titolo, il testo aletrnativo (se fornito) o i numeri di pagina. <br/> <br/>Il codice HTML utilizzato è:<br/>&lt;hr class="_QQ_"system-pagebreak"_QQ_" title="_QQ_"Titolo pagina"_QQ_" /&gt; o <br />&lt;hr class="_QQ_"system-pagebreak"_QQ_" alt="_QQ_"Prima pagina"_QQ_" /&gt; o <br />&lt;hr class="_QQ_"system-pagebreak"_QQ_" title="_QQ_"Titolo pagina"_QQ_" alt="_QQ_"Prima pagina"_QQ_" /&gt; o <br />&lt;hr class="_QQ_"system-pagebreak"_QQ_" alt="_QQ_"Prima pagina"_QQ_" title="_QQ_"Titolo pagina"_QQ_" /&gt;"
