--- a/administrator/language/it-IT/it-IT.plg_content_ipapagebreak.ini
+++ b/administrator/language/it-IT/it-IT.plg_content_ipapagebreak.ini
@@ -3,7 +3,7 @@
 ; License GNU General Public License version 3 or later; see LICENSE
 ; Note : All ini files need to be saved as UTF-8
 
-PLG_CONTENT_IPAPAGEBREAK="Content - Pagebreak for ItaliaPA Template"
+PLG_CONTENT_IPAPAGEBREAK="Content - Page Break for ItaliaPA"
 PLG_CONTENT_IPAPAGEBREAK_ALL_PAGES=" Tutte le pagine"
 PLG_CONTENT_IPAPAGEBREAK_ARTICLE_INDEX="Indice articoli"
 PLG_CONTENT_IPAPAGEBREAK_NO_TITLE="Nessun titolo"
