--- a/administrator/language/en-GB/en-GB.plg_content_ipapagebreak.ini
+++ b/administrator/language/en-GB/en-GB.plg_content_ipapagebreak.ini
@@ -1,9 +1,9 @@
 ; Page Break - plg_content_ipapagebreak
-; Copyright (C) 2018 Helios Ciancio. All rights reserved.
+; Copyright (C) 2018 - 2019 Helios Ciancio. All rights reserved.
 ; License GNU General Public License version 3 or later; see LICENSE
 ; Note : All ini files need to be saved as UTF-8
 
-PLG_CONTENT_IPAPAGEBREAK="Content - Page Break for ItaliaPA Template"
+PLG_CONTENT_IPAPAGEBREAK="Content - Page Break for ItaliaPA"
 PLG_CONTENT_IPAPAGEBREAK_ALL_PAGES=" All Pages"
 PLG_CONTENT_IPAPAGEBREAK_ARTICLE_INDEX="Article Index"
 PLG_CONTENT_IPAPAGEBREAK_NO_TITLE="No title"
@@ -16,6 +16,7 @@ PLG_CONTENT_IPAPAGEBREAK_SITE_ARTICLEINDEX_DESC="Show or hide Article Index Head
 PLG_CONTENT_IPAPAGEBREAK_SITE_ARTICLEINDEX_LABEL="Article Index Heading"
 PLG_CONTENT_IPAPAGEBREAK_SITE_TITLE_DESC="Title and heading attributes from Plugin added to Site Title tag."
 PLG_CONTENT_IPAPAGEBREAK_SITE_TITLE_LABEL="Show Site Title"
+PLG_CONTENT_IPAPAGEBREAK_STYLE_LABEL="Page Break Style"
 PLG_CONTENT_IPAPAGEBREAK_TOC_DESC="Display a table of contents on multipage Articles."
 PLG_CONTENT_IPAPAGEBREAK_TOC_LABEL="Table of Contents"
 PLG_CONTENT_IPAPAGEBREAK_XML_DESCRIPTION="Allow the creation of a paginated article with an optional table of contents.<br /><br />Insert page breaks through the use of the page break button normally found beneath the text panel in an Article. The location of the page break in an article will be displayed in the editor as a simple horizontal line.<br /><br />The text displayed will depend on the options chosen and may be either the title, alternate text (if provided) or page numbers. <br /><br />The HTML usage is:<br />&lt;hr class=&quot;system-pagebreak&quot; /&gt;<br />&lt;hr class=&quot;system-pagebreak&quot; title=&quot;The page title&quot; /&gt; or <br />&lt;hr class=&quot;system-pagebreak&quot; alt=&quot;The first page&quot; /&gt; or <br />&lt;hr class=&quot;system-pagebreak&quot; title=&quot;The page title&quot; alt=&quot;The first page&quot; /&gt; or <br />&lt;hr class=&quot;system-pagebreak&quot; alt=&quot;The first page&quot; title=&quot;The page title&quot; /&gt;"
