--- a/administrator/language/it-IT/it-IT.plg_content_ipapagebreak.ini
+++ b/administrator/language/it-IT/it-IT.plg_content_ipapagebreak.ini
@@ -3,7 +3,7 @@
 ; License GNU General Public License version 3 or later; see LICENSE
 ; Note : All ini files need to be saved as UTF-8
 
-PLG_CONTENT_IPAPAGEBREAK="Content - Pagebreak for ItaliaPA Template"
+PLG_CONTENT_IPAPAGEBREAK="Content - Page Break for ItaliaPA"
 PLG_CONTENT_IPAPAGEBREAK_ALL_PAGES=" Tutte le pagine"
 PLG_CONTENT_IPAPAGEBREAK_ARTICLE_INDEX="Indice articoli"
 PLG_CONTENT_IPAPAGEBREAK_NO_TITLE="Nessun titolo"
@@ -16,6 +16,7 @@ PLG_CONTENT_IPAPAGEBREAK_SITE_ARTICLEINDEX_DESC="Mostra o nasconde l'intestazion
 PLG_CONTENT_IPAPAGEBREAK_SITE_ARTICLEINDEX_LABEL="Intestazione indice articolo"
 PLG_CONTENT_IPAPAGEBREAK_SITE_TITLE_DESC="Attributi titolo ed intestazione aggiunti dal plugin al titolo del sito"
 PLG_CONTENT_IPAPAGEBREAK_SITE_TITLE_LABEL="Titolo sito"
+PLG_CONTENT_IPAPAGEBREAK_STYLE_LABEL="Stile Page Break"
 PLG_CONTENT_IPAPAGEBREAK_TOC_DESC="Mostra una tabella dei contenuti per articoli con più pagine."
 PLG_CONTENT_IPAPAGEBREAK_TOC_LABEL="Tabella dei contenuti"
-PLG_CONTENT_IPAPAGEBREAK_XML_DESCRIPTION="Consente la creazione di un articolo impaginato con una tabella dei contenuti. Inserisci l'interruzione di pagina con l'utilizzo del pulsante Pagebreak che si trova nella parte inferiore del testo di un articolo. Il Pagebreak verrà visualizzato nella finestra del testo come una singola linea orizzontale. <br /> Il testo visualizzato dipenderà dalle opzioni scelte, cioè il titolo, il testo aletrnativo (se fornito) o i numeri di pagina. <br/> <br/>Il codice HTML utilizzato è:<br/>&lt;hr class="_QQ_"system-pagebreak"_QQ_" title="_QQ_"Titolo pagina"_QQ_" /&gt; o <br />&lt;hr class="_QQ_"system-pagebreak"_QQ_" alt="_QQ_"Prima pagina"_QQ_" /&gt; o <br />&lt;hr class="_QQ_"system-pagebreak"_QQ_" title="_QQ_"Titolo pagina"_QQ_" alt="_QQ_"Prima pagina"_QQ_" /&gt; o <br />&lt;hr class="_QQ_"system-pagebreak"_QQ_" alt="_QQ_"Prima pagina"_QQ_" title="_QQ_"Titolo pagina"_QQ_" /&gt;"
+PLG_CONTENT_IPAPAGEBREAK_XML_DESCRIPTION="Consente la creazione di un articolo impaginato con una tabella dei contenuti. Inserisci l'interruzione di pagina con l'utilizzo del pulsante Pagebreak che si trova nella parte inferiore del testo di un articolo. Il Pagebreak verrà visualizzato nella finestra del testo come una singola linea orizzontale. <br /> Il testo visualizzato dipenderà dalle opzioni scelte, cioè il titolo, il testo alternativo (se fornito) o i numeri di pagina. <br/> <br/>Il codice HTML utilizzato è:<br/>&lt;hr class="_QQ_"system-pagebreak"_QQ_" title="_QQ_"Titolo pagina"_QQ_" /&gt; o <br />&lt;hr class="_QQ_"system-pagebreak"_QQ_" alt="_QQ_"Prima pagina"_QQ_" /&gt; o <br />&lt;hr class="_QQ_"system-pagebreak"_QQ_" title="_QQ_"Titolo pagina"_QQ_" alt="_QQ_"Prima pagina"_QQ_" /&gt; o <br />&lt;hr class="_QQ_"system-pagebreak"_QQ_" alt="_QQ_"Prima pagina"_QQ_" title="_QQ_"Titolo pagina"_QQ_" /&gt;"
