--- a/language/en-GB/en-GB.mod_carousel.ini
+++ b/language/en-GB/en-GB.mod_carousel.ini
@@ -23,7 +23,7 @@ MOD_CAROUSEL_IMAGE_LINK_BROWSERNAV_DESC="Target browser window when the link is 
 MOD_CAROUSEL_IMAGE_LINK_BROWSERNAV_LABEL="URL Target Window"
 MOD_CAROUSEL_IMAGE_LINK_LABEL="Link"
 MOD_CAROUSEL_IMAGE_TITLE_LABEL="Image Title"
-MOD_CAROUSEL_INTERVAL_DESC="Specifies the delay (in milliseconds) between each slide."
+MOD_CAROUSEL_INTERVAL_DESC="Specifies the amount of time to delay (in milliseconds) between one slide to another in automatic cycling."
 MOD_CAROUSEL_INTERVAL_LABEL="Interval"
 MOD_CAROUSEL_SHOW_CONTROLS_DESC="Adds a left button and a right one to the carousel, which allow the user to go back and forth between the slides."
 MOD_CAROUSEL_SHOW_CONTROLS_LABEL="Show controls"
@@ -31,5 +31,11 @@ MOD_CAROUSEL_SHOW_INDICATORS_DESC="Adds indicators for the carousel. These are t
 MOD_CAROUSEL_SHOW_INDICATORS_LABEL="Show indicators"
 MOD_CAROUSEL_SLIDE_INFO="You can use arrow keys to navigate slides"
 MOD_CAROUSEL_SLIDE_NEXT="Go to the next slide"
+MOD_CAROUSEL_SLIDE_ORDER_DESC="The order that slides will show in."
+MOD_CAROUSEL_SLIDE_ORDER_LABEL="Order"
+MOD_CAROUSEL_SLIDE_ORDERING="Slide Order"
 MOD_CAROUSEL_SLIDE_PREV="Go to the prevoius slide"
+MOD_CAROUSEL_SLIDE_REVERSE_ORDERING="Slide Reverse Order"
+MOD_CAROUSEL_SPEED_DESC="Specifies the time (in milliseconds) a transition effect takes to complete."
+MOD_CAROUSEL_SPEED_LABEL="Speed"
 MOD_CAROUSEL_XML_DESCRIPTION="The module displays images in carousel format."
