--- a/language/it-IT/it-IT.mod_carousel.ini
+++ b/language/it-IT/it-IT.mod_carousel.ini
@@ -1,6 +1,6 @@
 ; Template ItaliaPA - Carousel Module
 ; Copyright (C) 2017 - 2019 Helios Ciancio. All rights reserved.
-; License GNU General Public License version 3 or later; see LICENSE.txt
+; License GNU General Public License version 3 or later; see LICENSE
 ; Note : All ini files need to be saved as UTF-8
 
 MOD_CAROUSEL="Carousel"
@@ -31,5 +31,11 @@ MOD_CAROUSEL_SHOW_INDICATORS_DESC="Aggiunge indicatori per il carousel. Questi s
 MOD_CAROUSEL_SHOW_INDICATORS_LABEL="Mostra indicatori"
 MOD_CAROUSEL_SLIDE_INFO="È possibile navigare le slide utilizzando i tasti freccia"
 MOD_CAROUSEL_SLIDE_NEXT="Vai alla slide successiva"
+MOD_CAROUSEL_SLIDE_ORDER_DESC="Ordine di visualizzazione delle slide."
+MOD_CAROUSEL_SLIDE_ORDER_LABEL="Ordinamento"
+MOD_CAROUSEL_SLIDE_ORDERING="Ordine slide"
 MOD_CAROUSEL_SLIDE_PREV="Vai alla slide precedente"
+MOD_CAROUSEL_SLIDE_REVERSE_ORDERING="Ordine slide inverso"
+MOD_CAROUSEL_SPEED_DESC="Specifica il tempo (in millisecondi) necessario per completare un effetto di transizione da una slide ad un'altra."
+MOD_CAROUSEL_SPEED_LABEL="Velocità"
 MOD_CAROUSEL_XML_DESCRIPTION="Questo modulo mostra immagini in formato carousel."
