--- a/language/it-IT/it-IT.mod_carousel.sys.ini
+++ b/language/it-IT/it-IT.mod_carousel.sys.ini
@@ -1,5 +1,5 @@
-; Template ItaliaPA - Carousel Module 3.7.0
-; Copyright (C) 2017, 2018 Helios Ciancio. All rights reserved.
+; Template ItaliaPA - Carousel Module
+; Copyright (C) 2017 - 2019 Helios Ciancio. All rights reserved.
 ; License GNU General Public License version 3 or later; see LICENSE
 ; Note : All ini files need to be saved as UTF-8
 
