--- a/language/en-GB/en-GB.mod_cookiebar.ini
+++ b/language/en-GB/en-GB.mod_cookiebar.ini
@@ -4,16 +4,28 @@
 ; Note : All ini files need to be saved as UTF-8
 
 MOD_COOKIEBAR="Cookie Bar"
-MOD_COOKIEBAR_ACCEPT="Accept"
-MOD_COOKIEBAR_DEBUG_SYSTEM_DESC="If enabled, diagnostic information will be saved."
-MOD_COOKIEBAR_DEBUG_SYSTEM_LABEL="Debug"
+MOD_COOKIEBAR_ACCEPT="Accept All Cookies"
 MOD_COOKIEBAR_DEBUG_FILENAME_DESC="The name of the file that stores current log messages."
 MOD_COOKIEBAR_DEBUG_FILENAME_LABEL="Filename"
-MOD_COOKIEBAR_DEBUG_PHPCONSOLE_DESC=""
+MOD_COOKIEBAR_DEBUG_PHPCONSOLE_DESC="If enabled, it displays log messages in Google Chrome console and notification popups."
 MOD_COOKIEBAR_DEBUG_PHPCONSOLE_LABEL="PHP Console"
-MOD_COOKIEBAR_FIELD_TEXT_DESC="This site uses cookies. By continuing to browse the site, you are agreeing to our use of cookies."
-MOD_COOKIEBAR_FIELD_TEXT_LABEL="Text"
+MOD_COOKIEBAR_DEBUG_SYSTEM_DESC="If enabled, diagnostic information will be saved."
+MOD_COOKIEBAR_DEBUG_SYSTEM_LABEL="Debug"
+
+MOD_COOKIEBAR_DECLINE="Decline"
+MOD_COOKIEBAR_FIELD_DECLINE_DESC=""
+MOD_COOKIEBAR_FIELD_DECLINE_LABEL="Decline"
 MOD_COOKIEBAR_FIELD_POLICY_DESC=""
 MOD_COOKIEBAR_FIELD_POLICY_LABEL="Policy"
+
+MOD_COOKIEBAR_FIELD_TEXT_DESC="This site uses cookies. By continuing to browse the site, you are agreeing to our use of cookies."
+MOD_COOKIEBAR_FIELD_TEXT2_DESC="By clicking "_QQ_"Accept All Cookies"_QQ_" you agree to the storing of cookies on your device to enhance site navigation, analyze site usage, and assist in our marketing efforts."
+MOD_COOKIEBAR_FIELD_TEXT_LABEL="Text"
+
 MOD_COOKIEBAR_POLICY="Privacy Policy"
 MOD_COOKIEBAR_XML_DESCRIPTION="The module displays information about the use of cookies."
+
+MOD_COOKIEBAR_FIELD_TEXT_DESC="This site uses cookies. By continuing to browse the site, you are agreeing to our use of cookies."
+MOD_COOKIEBAR_FIELD_TEXT2_DESC="By clicking "_QQ_"Accept All Cookies"_QQ_" you agree to the storing of cookies on your device to enhance site navigation, analyze site usage, and assist in our marketing efforts."
+
+
