--- a/language/it-IT/it-IT.mod_cookiebar.ini
+++ b/language/it-IT/it-IT.mod_cookiebar.ini
@@ -4,16 +4,24 @@
 ; Note : All ini files need to be saved as UTF-8
 
 MOD_COOKIEBAR="Cookie Bar"
-MOD_COOKIEBAR_ACCEPT="Accetto"
-MOD_COOKIEBAR_DEBUG_SYSTEM_DESC="Se abilitato, saranno salvate le informazioni di diagnostica."
-MOD_COOKIEBAR_DEBUG_SYSTEM_LABEL="Debug"
+MOD_COOKIEBAR_ACCEPT="Accetta tutti i cookie"
 MOD_COOKIEBAR_DEBUG_FILENAME_DESC="Il nome del file in cui sono salvati i messaggi di log attuali."
 MOD_COOKIEBAR_DEBUG_FILENAME_LABEL="Nome del file"
-MOD_COOKIEBAR_DEBUG_PHPCONSOLE_DESC=""
+MOD_COOKIEBAR_DEBUG_PHPCONSOLE_DESC="Se abilitato, visualizza i messaggi di debug in Google Chrome console."
 MOD_COOKIEBAR_DEBUG_PHPCONSOLE_LABEL="PHP Console"
-MOD_COOKIEBAR_FIELD_TEXT_LABEL="Text"
-MOD_COOKIEBAR_FIELD_TEXT_DESC="Questo sito utilizza cookie tecnici, analytics e di terze parti.<br/>Proseguendo nella navigazione accetti l'utilizzo dei cookie."
-MOD_COOKIEBAR_FIELD_POLICY_LABEL="Policy"
+MOD_COOKIEBAR_DEBUG_SYSTEM_DESC="Se abilitato, saranno salvate le informazioni di diagnostica."
+MOD_COOKIEBAR_DEBUG_SYSTEM_LABEL="Debug"
+MOD_COOKIEBAR_DECLINE="Rifiuta"
+MOD_COOKIEBAR_FIELD_DECLINE_DESC=""
+MOD_COOKIEBAR_FIELD_DECLINE_LABEL="Decline"
 MOD_COOKIEBAR_FIELD_POLICY_DESC=""
+MOD_COOKIEBAR_FIELD_POLICY_LABEL="Policy"
+MOD_COOKIEBAR_FIELD_TEXT_DESC=""
+MOD_COOKIEBAR_FIELD_TEXT_LABEL="Text"
 MOD_COOKIEBAR_POLICY="Privacy Policy"
 MOD_COOKIEBAR_XML_DESCRIPTION="Questo modulo mostra le informazioni sull'uso dei cookie."
+
+MOD_COOKIEBAR_TEXT1="Questo sito utilizza cookie tecnici, analytics e di terze parti.<br/>Proseguendo nella navigazione accetti l'utilizzo dei cookie."
+MOD_COOKIEBAR_TEXT2="Facendo click su "_QQ_"Accetta tutti i cookie"_QQ_" l'utente acconsente alla memorizzazione dei cookie sul proprio dispositivo. Il loro utilizzo è necessario per la personalizzazione della navigazione su questo sito; accettando il loro utilizzo, l'utente acconsente al tracciamento per l'analisi della navigazione, anche a fini commerciali e di marketing."
+
+
