--- a/language/it-IT/it-IT.mod_cookiebar.ini
+++ b/language/it-IT/it-IT.mod_cookiebar.ini
@@ -16,12 +16,12 @@ MOD_COOKIEBAR_FIELD_DECLINE_DESC=""
 MOD_COOKIEBAR_FIELD_DECLINE_LABEL="Decline"
 MOD_COOKIEBAR_FIELD_POLICY_DESC=""
 MOD_COOKIEBAR_FIELD_POLICY_LABEL="Policy"
-MOD_COOKIEBAR_FIELD_TEXT_DESC=""
+
+MOD_COOKIEBAR_FIELD_TEXT_DESC="Questo sito utilizza cookie tecnici, analytics e di terze parti.<br/>Proseguendo nella navigazione accetti l'utilizzo dei cookie."
+MOD_COOKIEBAR_FIELD_TEXT2_DESC="Facendo click su "_QQ_"Accetta tutti i cookie"_QQ_" l'utente acconsente alla memorizzazione dei cookie sul proprio dispositivo. Il loro utilizzo è necessario per la personalizzazione della navigazione su questo sito; accettando il loro utilizzo, l'utente acconsente al tracciamento per l'analisi della navigazione, anche a fini commerciali e di marketing."
 MOD_COOKIEBAR_FIELD_TEXT_LABEL="Text"
+
 MOD_COOKIEBAR_POLICY="Privacy Policy"
 MOD_COOKIEBAR_XML_DESCRIPTION="Questo modulo mostra le informazioni sull'uso dei cookie."
-
-MOD_COOKIEBAR_TEXT1="Questo sito utilizza cookie tecnici, analytics e di terze parti.<br/>Proseguendo nella navigazione accetti l'utilizzo dei cookie."
-MOD_COOKIEBAR_TEXT2="Facendo click su "_QQ_"Accetta tutti i cookie"_QQ_" l'utente acconsente alla memorizzazione dei cookie sul proprio dispositivo. Il loro utilizzo è necessario per la personalizzazione della navigazione su questo sito; accettando il loro utilizzo, l'utente acconsente al tracciamento per l'analisi della navigazione, anche a fini commerciali e di marketing."
 
 
