--- a/language/it-IT/it-IT.mod_cookiebar.ini
+++ b/language/it-IT/it-IT.mod_cookiebar.ini
@@ -1,5 +1,5 @@
 ; Template ItaliaPA - Cookiebar Module
-; Copyright (C) 2017, 2018 Helios Ciancio. All rights reserved.
+; Copyright (C) 2017 - 2019 Helios Ciancio. All rights reserved.
 ; License GNU General Public License version 3 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
@@ -12,16 +12,12 @@ MOD_COOKIEBAR_DEBUG_PHPCONSOLE_LABEL="PHP Console"
 MOD_COOKIEBAR_DEBUG_SYSTEM_DESC="Se abilitato, saranno salvate le informazioni di diagnostica."
 MOD_COOKIEBAR_DEBUG_SYSTEM_LABEL="Debug"
 MOD_COOKIEBAR_DECLINE="Rifiuta"
-MOD_COOKIEBAR_FIELD_DECLINE_DESC=""
-MOD_COOKIEBAR_FIELD_DECLINE_LABEL="Decline"
-MOD_COOKIEBAR_FIELD_POLICY_DESC=""
+MOD_COOKIEBAR_FIELD_DECLINE_DESC="Se abilitato, viene mostrato il pulsante per il rifiuto dei cookie."
+MOD_COOKIEBAR_FIELD_DECLINE_LABEL="Rifuta"
+MOD_COOKIEBAR_FIELD_POLICY_DESC="Il link all'articolo contenente l'informativa sull'uso dei cookie."
 MOD_COOKIEBAR_FIELD_POLICY_LABEL="Policy"
-
-MOD_COOKIEBAR_FIELD_TEXT_DESC="Questo sito utilizza cookie tecnici, analytics e di terze parti.<br/>Proseguendo nella navigazione accetti l'utilizzo dei cookie."
-MOD_COOKIEBAR_FIELD_TEXT2_DESC="Facendo click su "_QQ_"Accetta tutti i cookie"_QQ_" l'utente acconsente alla memorizzazione dei cookie sul proprio dispositivo. Il loro utilizzo è necessario per la personalizzazione della navigazione su questo sito; accettando il loro utilizzo, l'utente acconsente al tracciamento per l'analisi della navigazione, anche a fini commerciali e di marketing."
-MOD_COOKIEBAR_FIELD_TEXT_LABEL="Text"
-
+MOD_COOKIEBAR_FIELD_TEXT="Questo sito utilizza cookie tecnici, analytics e di terze parti.<br/>Facendo click su "_QQ_"Accetta tutti i cookie"_QQ_" l'utente acconsente alla memorizzazione dei cookie sul proprio dispositivo. Il loro utilizzo è necessario per la personalizzazione della navigazione su questo sito; accettando il loro utilizzo, l'utente acconsente al tracciamento per l'analisi della navigazione, anche a fini commerciali e di marketing."
+MOD_COOKIEBAR_FIELD_TEXT_DESC="Il testo da visualizzare nel banner.<br/>Se omesso:<br/>Questo sito utilizza cookie tecnici, analytics e di terze parti.<br/>Facendo click su "_QQ_"Accetta tutti i cookie"_QQ_" l'utente acconsente alla memorizzazione dei cookie sul proprio dispositivo. Il loro utilizzo è necessario per la personalizzazione della navigazione su questo sito; accettando il loro utilizzo, l'utente acconsente al tracciamento per l'analisi della navigazione, anche a fini commerciali e di marketing."
+MOD_COOKIEBAR_FIELD_TEXT_LABEL="Testo"
 MOD_COOKIEBAR_POLICY="Privacy Policy"
 MOD_COOKIEBAR_XML_DESCRIPTION="Questo modulo mostra le informazioni sull'uso dei cookie."
-
-
