--- a/language/en-GB/en-GB.mod_cookiebar.sys.ini
+++ b/language/en-GB/en-GB.mod_cookiebar.sys.ini
@@ -1,5 +1,5 @@
 ; Template ItaliaPA - Cookiebar Module
-; Copyright (C) 2017 Helios Ciancio. All rights reserved.
+; Copyright (C) 2017 - 2019 Helios Ciancio. All rights reserved.
 ; License GNU General Public License version 3 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
