--- a/language/it-IT/it-IT.tpl_italiapa.ini
+++ b/language/it-IT/it-IT.tpl_italiapa.ini
@@ -44,3 +44,4 @@ TPL_ITALIAPA_THEME_DEFAULT="Default"
 TPL_ITALIAPA_THEME_ITALIA="Italia"
 TPL_ITALIAPA_THEME_SCHOOL="Scuola"
 TPL_ITALIAPA_THEME_SCHOOLUNOFFICIAL="Scuola Unofficial"
+TPL_ITALIAPA_UNTRUST_THIS_BROWSER="Rimuovi fiducia"
