--- a/language/en-GB/en-GB.tpl_italiapa.ini
+++ b/language/en-GB/en-GB.tpl_italiapa.ini
@@ -42,6 +42,7 @@ TPL_ITALIAPA_SCHEMA_ORGANIZATION="Organization"
 TPL_ITALIAPA_SOURCE="Source"
 TPL_ITALIAPA_THEME_DEFAULT="Default"
 TPL_ITALIAPA_THEME_ITALIA="Italy"
+TPL_ITALIAPA_THEME_NONE="None"
 TPL_ITALIAPA_THEME_SCHOOL="School"
 TPL_ITALIAPA_THEME_SCHOOLUNOFFICIAL="School Unofficial"
 TPL_ITALIAPA_UNTRUST_THIS_BROWSER="Untrust this browser"
