--- a/language/en-GB/en-GB.tpl_italiapa.ini
+++ b/language/en-GB/en-GB.tpl_italiapa.ini
@@ -41,7 +41,8 @@ TPL_ITALIAPA_SCHEMA_ORGANIZATION_LABEL="Organization type"
 TPL_ITALIAPA_SCHEMA_ORGANIZATION="Organization"
 TPL_ITALIAPA_SOURCE="Source"
 TPL_ITALIAPA_THEME_DEFAULT="Default"
-TPL_ITALIAPA_THEME_ITALIA="Italy"
+TPL_ITALIAPA_THEME_ITALIA="Italia"
+TPL_ITALIAPA_THEME_ITALIAAA="Italia accessible"
 TPL_ITALIAPA_THEME_NONE="None"
 TPL_ITALIAPA_THEME_SCHOOL="School"
 TPL_ITALIAPA_THEME_SCHOOLUNOFFICIAL="School Unofficial"
