--- a/language/it-IT/it-IT.tpl_italiapa.ini
+++ b/language/it-IT/it-IT.tpl_italiapa.ini
@@ -42,6 +42,7 @@ TPL_ITALIAPA_SCHEMA_ORGANIZATION="Organizzazione"
 TPL_ITALIAPA_SOURCE="Fonte"
 TPL_ITALIAPA_THEME_DEFAULT="Default"
 TPL_ITALIAPA_THEME_ITALIA="Italia"
+TPL_ITALIAPA_THEME_ITALIAAA="Italia accessibile"
 TPL_ITALIAPA_THEME_NONE="Nessuno"
 TPL_ITALIAPA_THEME_SCHOOL="Scuola"
 TPL_ITALIAPA_THEME_SCHOOLUNOFFICIAL="Scuola Unofficial"
