--- a/language/en-GB/en-GB.tpl_italiapa.ini
+++ b/language/en-GB/en-GB.tpl_italiapa.ini
@@ -24,6 +24,7 @@ TPL_ITALIAPA_FIELD_THEME_DESC="Colour of the template."
 TPL_ITALIAPA_FIELD_THEME_LABEL="Theme"
 TPL_ITALIAPA_HEADING_AUTHOR="Author"
 TPL_ITALIAPA_HEADING_DATE="Date"
+TPL_ITALIAPA_HEADING_DOWNLOAD="Download"
 TPL_ITALIAPA_HEADING_HITS="Hits"
 TPL_ITALIAPA_LINK_HREF_DESC=""
 TPL_ITALIAPA_LINK_HREF_LABEL="URL"
@@ -45,5 +46,5 @@ TPL_ITALIAPA_THEME_ITALIA="Italia"
 TPL_ITALIAPA_THEME_ITALIAAA="Italia accessible"
 TPL_ITALIAPA_THEME_NONE="None"
 TPL_ITALIAPA_THEME_SCHOOL="School"
-TPL_ITALIAPA_THEME_SCHOOLUNOFFICIAL="School Unofficial"
+TPL_ITALIAPA_THEME_SCHOOLUNOFFICIAL="School unofficial"
 TPL_ITALIAPA_UNTRUST_THIS_BROWSER="Untrust this browser"
