--- a/language/en-GB/en-GB.tpl_italiapa.sys.ini
+++ b/language/en-GB/en-GB.tpl_italiapa.sys.ini
@@ -1,8 +1,11 @@
 ; Template ItaliaPA
-; Copyright (C) 2017 Helios Ciancio. All rights reserved.
+; Copyright (C) 2017 - 2019 Helios Ciancio. All rights reserved.
 ; License GNU General Public License version 3 or later; see LICENSE
 ; Note : All ini files need to be saved as UTF-8
 
+TPL_ITALIAPA_CATEGORY_VIEW_ANAC_DESC="Displays a list of articles in a category."
+TPL_ITALIAPA_CATEGORY_VIEW_ANAC_OPTION="List"
+TPL_ITALIAPA_CATEGORY_VIEW_ANAC_TITLE="Category List (layout: ANAC)"
 TPL_ITALIAPA_CATEGORY_VIEW_FOCUS_DESC="Displays article introductions in a single or multi-column layout."
 TPL_ITALIAPA_CATEGORY_VIEW_FOCUS_OPTION="Focus"
 TPL_ITALIAPA_CATEGORY_VIEW_FOCUS_TITLE="Category Blog (layout: Focus)"
