--- a/language/it-IT/it-IT.tpl_italiapa.sys.ini
+++ b/language/it-IT/it-IT.tpl_italiapa.sys.ini
@@ -1,8 +1,11 @@
 ; Template ItaliaPA
-; Copyright (C) 2017 Helios Ciancio. All rights reserved.
+; Copyright (C) 2017 - 2019 Helios Ciancio. All rights reserved.
 ; License GNU General Public License version 3 or later; see LICENSE
 ; Note : All ini files need to be saved as UTF-8
 
+TPL_ITALIAPA_CATEGORY_VIEW_ANAC_DESC="Visualizza la lista degli articoli appartenenti ad una categoria."
+TPL_ITALIAPA_CATEGORY_VIEW_ANAC_OPTION="Lista"
+TPL_ITALIAPA_CATEGORY_VIEW_ANAC_TITLE="Lista di singola categoria (layout: ANAC)"
 TPL_ITALIAPA_CATEGORY_VIEW_FOCUS_DESC="Visualizza le introduzioni degli articoli con un layout a singola o multi-colonna."
 TPL_ITALIAPA_CATEGORY_VIEW_FOCUS_OPTION="Focus"
 TPL_ITALIAPA_CATEGORY_VIEW_FOCUS_TITLE="Categoria blog (layout: Focus)"
