Heronews - Notizie ed eventi

--- a/language/en-GB/en-GB.tpl_italiapa.ini
+++ b/language/en-GB/en-GB.tpl_italiapa.ini
@@ -32,6 +32,7 @@ TPL_ITALIAPA_LINK_SHORT_LABEL="Short title"
 TPL_ITALIAPA_LINK_TITLE_DESC=""
 TPL_ITALIAPA_LINK_TITLE_LABEL="Title"
 TPL_ITALIAPA_MICRODATA_LABEL="Microdata"
+TPL_ITALIAPA_NEWSANDEVENTS="News and events"
 TPL_ITALIAPA_OPERATION_SUCCESS="Operation performed successfully"
 TPL_ITALIAPA_PAGE="Page"
 TPL_ITALIAPA_SCHEMA_EDUCATIONALORGANIZATION="Educational Organization"
