--- a/language/it-IT/it-IT.tpl_italiapa.ini
+++ b/language/it-IT/it-IT.tpl_italiapa.ini
@@ -32,6 +32,7 @@ TPL_ITALIAPA_LINK_SHORT_LABEL="Titolo breve"
 TPL_ITALIAPA_LINK_TITLE_DESC=""
 TPL_ITALIAPA_LINK_TITLE_LABEL="Titolo"
 TPL_ITALIAPA_MICRODATA_LABEL="Microdata"
+TPL_ITALIAPA_NEWSANDEVENTS="Notizie ed eventi"
 TPL_ITALIAPA_OPERATION_SUCCESS="Operazione eseguita con successo"
 TPL_ITALIAPA_PAGE="Pagina"
 TPL_ITALIAPA_SCHEMA_EDUCATIONALORGANIZATION="Organizzazione Educativa"
