Hamburger menu Position

--- a/language/en-GB/en-GB.tpl_italiapa.ini
+++ b/language/en-GB/en-GB.tpl_italiapa.ini
@@ -14,6 +14,8 @@ TPL_ITALIAPA_DEBUG_PHPCONSOLE_DESC=""
 TPL_ITALIAPA_DEBUG_PHPCONSOLE_LABEL="PHP Console"
 TPL_ITALIAPA_DEBUG_SYSTEM_DESC="If enabled, diagnostic information will be saved."
 TPL_ITALIAPA_DEBUG_SYSTEM_LABEL="Debug"
+TPL_ITALIAPA_FIELD_HAMBURGERMENU_POS_DESC="The position of the Hamburger menu."
+TPL_ITALIAPA_FIELD_HAMBURGERMENU_POS_LABEL="Hamburger menu Position"
 TPL_ITALIAPA_FIELD_LINKS_DESC=""
 TPL_ITALIAPA_FIELD_LINKS_LABEL="Links"
 TPL_ITALIAPA_FIELD_LOGO_DESC="Image 76x76"
