--- a/language/it-IT/it-IT.tpl_italiapa.ini
+++ b/language/it-IT/it-IT.tpl_italiapa.ini
@@ -14,6 +14,8 @@ TPL_ITALIAPA_DEBUG_PHPCONSOLE_DESC=""
 TPL_ITALIAPA_DEBUG_PHPCONSOLE_LABEL="Console PHP"
 TPL_ITALIAPA_DEBUG_SYSTEM_DESC="Se abilitato, saranno salvate le informazioni di diagnostica."
 TPL_ITALIAPA_DEBUG_SYSTEM_LABEL="Debug"
+TPL_ITALIAPA_FIELD_HAMBURGERMENU_POS_DESC="Posizione del menu Hamburger"
+TPL_ITALIAPA_FIELD_HAMBURGERMENU_POS_LABEL="Posizione Manburger menu"
 TPL_ITALIAPA_FIELD_LINKS_DESC=""
 TPL_ITALIAPA_FIELD_LINKS_LABEL="Link"
 TPL_ITALIAPA_FIELD_LOGO_DESC="Immagine 76x76 px"
