--- a/language/it-IT/it-IT.tpl_italiapa.sys.ini
+++ b/language/it-IT/it-IT.tpl_italiapa.sys.ini
@@ -28,4 +28,8 @@ TPL_ITALIAPA_FEATURED_VIEW_GRID_TITLE="Articoli in evidenza di tutte le categori
 TPL_ITALIAPA_FEATURED_VIEW_HERONEWS_DESC="Visualizza le introduzioni degli articoli in evidenza di tutte le categorie con un layout a singola o multi-colonna. "
 TPL_ITALIAPA_FEATURED_VIEW_HERONEWS_OPTION="Hero news"
 TPL_ITALIAPA_FEATURED_VIEW_HERONEWS_TITLE="Articoli in evidenza di tutte le categorie (layout: Hero news)"
+TPL_ITALIAPA_OSMAP_SITEMAP_HTML_VIEW_LINKLIST_DESC = "Visualizza la mappa del sito in formato HTML"
+TPL_ITALIAPA_OSMAP_SITEMAP_HTML_VIEW_LINKLIST_TITLE = "Mappa del sito - Formato HTML (layout: Linklist)"
+TPL_ITALIAPA_OSMAP_SITEMAP_HTML_VIEW_TREEVIEW_DESC = "Visualizza la mappa del sito in formato HTML"
+TPL_ITALIAPA_OSMAP_SITEMAP_HTML_VIEW_TREEVIEW_TITLE = "Mappa del sito - Formato HTML (layout: Treeview)"
 TPL_ITALIAPA_XML_DESCRIPTION="<h1>Template ItaliaPA for Joomla! 3.9</h1><p>Implementazione delle<a href=""http://www.agid.gov.it/tags/linee-guida-design-pa"" target=""_blank"">Linee guida di design per i servizi web della PA</a> basato su<a href=""https://italia.github.io/design-web-toolkit/"" target=""_blank"">it Web Toolkit</a>.</p><p>Created by <a href=""http://www.eshiol.it"" target=""_blank"">Helios Ciancio <img src=""https://www.eshiol.it/files/italiapa/eshiol.png"" alt=""eshiol.it""/></a></p>"
