--- a/language/en-GB/en-GB.tpl_italiapa.ini
+++ b/language/en-GB/en-GB.tpl_italiapa.ini
@@ -28,6 +28,8 @@ TPL_ITALIAPA_FIELD_SUBTITLE_DESC=""
 TPL_ITALIAPA_FIELD_SUBTITLE_LABEL="Subtitle"
 TPL_ITALIAPA_FIELD_THEME_DESC="Colour of the template."
 TPL_ITALIAPA_FIELD_THEME_LABEL="Theme"
+TPL_ITALIAPA_FIELDSET_ADVANCED="Advanced"
+TPL_ITALIAPA_FIELDSET_BASIC="Options"
 TPL_ITALIAPA_HEADING_AUTHOR="Author"
 TPL_ITALIAPA_HEADING_DATE="Date"
 TPL_ITALIAPA_HEADING_DOWNLOAD="Download"
@@ -61,3 +63,4 @@ TPL_ITALIAPA_THEME_SCHOOL="School"
 TPL_ITALIAPA_THEME_SCHOOLUNOFFICIAL="School unofficial"
 TPL_ITALIAPA_UNTRUST_THIS_BROWSER="Untrust this browser"
 TPL_ITALIAPA_XML_DESCRIPTION="<h1>Template ItaliaPA for Joomla! 3.9</h1><p>Implementazione delle<a href=""http://www.agid.gov.it/tags/linee-guida-design-pa"" target=""_blank"">Linee guida di design per i servizi web della PA</a> basato su<a href=""https://italia.github.io/design-web-toolkit/"" target=""_blank"">it Web Toolkit</a>.</p><p>Created by <a href=""http://www.eshiol.it"" target=""_blank"">Helios Ciancio <img src=""https://www.eshiol.it/files/italiapa/eshiol.png"" alt=""eshiol.it""/></a></p>"
+
