--- a/language/it-IT/it-IT.tpl_italiapa.ini
+++ b/language/it-IT/it-IT.tpl_italiapa.ini
@@ -28,6 +28,8 @@ TPL_ITALIAPA_FIELD_SUBTITLE_DESC="Eventuale sottotitolo"
 TPL_ITALIAPA_FIELD_SUBTITLE_LABEL="Sottotitolo"
 TPL_ITALIAPA_FIELD_THEME_DESC="Colore del template"
 TPL_ITALIAPA_FIELD_THEME_LABEL="Tema"
+TPL_ITALIAPA_FIELDSET_ADVANCED="Avanzate"
+TPL_ITALIAPA_FIELDSET_BASIC="Opzioni"
 TPL_ITALIAPA_HEADING_AUTHOR="Autore"
 TPL_ITALIAPA_HEADING_DATE="Data"
 TPL_ITALIAPA_HEADING_DOWNLOAD="Download"
