--- a/language/en-GB/en-GB.tpl_italiapa.ini
+++ b/language/en-GB/en-GB.tpl_italiapa.ini
@@ -4,6 +4,10 @@
 ; Note : All ini files need to be saved as UTF-8
 
 ITALIAPA="ItaliaPA"
+JGLOBAL_FIELDSET_ADVANCED="Advanced"
+JGLOBAL_FIELDSET_BASIC="Options"
+JGLOBAL_NUM_COLUMNS_DESC="The number of columns in which to show Intro Articles. Normally 1, 2, or 3."
+JGLOBAL_NUM_COLUMNS_LABEL="# Columns"
 TPL_ITALIAPA_BACKTOTOP="Back to Top"
 TPL_ITALIAPA_BUTTONS_REPORT="Report"
 TPL_ITALIAPA_BUTTONS_CSV="CSV"
@@ -28,8 +32,6 @@ TPL_ITALIAPA_FIELD_SUBTITLE_DESC=""
 TPL_ITALIAPA_FIELD_SUBTITLE_LABEL="Subtitle"
 TPL_ITALIAPA_FIELD_THEME_DESC="Colour of the template."
 TPL_ITALIAPA_FIELD_THEME_LABEL="Theme"
-TPL_ITALIAPA_FIELDSET_ADVANCED="Advanced"
-TPL_ITALIAPA_FIELDSET_BASIC="Options"
 TPL_ITALIAPA_HEADING_AUTHOR="Author"
 TPL_ITALIAPA_HEADING_DATE="Date"
 TPL_ITALIAPA_HEADING_DOWNLOAD="Download"
