--- a/language/it-IT/it-IT.tpl_italiapa.ini
+++ b/language/it-IT/it-IT.tpl_italiapa.ini
@@ -4,6 +4,10 @@
 ; Note : All ini files need to be saved as UTF-8
 
 ITALIAPA="ItaliaPA"
+JGLOBAL_FIELDSET_ADVANCED="Avanzate"
+JGLOBAL_FIELDSET_BASIC="Opzioni"
+JGLOBAL_NUM_COLUMNS_DESC="Numero di colonne nelle quali mostrare gli articoli introduttivi. Di solito 1, 2, o 3."
+JGLOBAL_NUM_COLUMNS_LABEL="n. colonne"
 TPL_ITALIAPA_BACKTOTOP="Torna su"
 TPL_ITALIAPA_BUTTONS_REPORT="Report"
 TPL_ITALIAPA_BUTTONS_CSV="CSV"
@@ -28,8 +32,6 @@ TPL_ITALIAPA_FIELD_SUBTITLE_DESC="Eventuale sottotitolo"
 TPL_ITALIAPA_FIELD_SUBTITLE_LABEL="Sottotitolo"
 TPL_ITALIAPA_FIELD_THEME_DESC="Colore del template"
 TPL_ITALIAPA_FIELD_THEME_LABEL="Tema"
-TPL_ITALIAPA_FIELDSET_ADVANCED="Avanzate"
-TPL_ITALIAPA_FIELDSET_BASIC="Opzioni"
 TPL_ITALIAPA_HEADING_AUTHOR="Autore"
 TPL_ITALIAPA_HEADING_DATE="Data"
 TPL_ITALIAPA_HEADING_DOWNLOAD="Download"
