--- a/language/en-GB/en-GB.tpl_italiapa.ini
+++ b/language/en-GB/en-GB.tpl_italiapa.ini
@@ -8,6 +8,9 @@ TPL_ITALIAPA_BACKTOTOP="Back to Top"
 TPL_ITALIAPA_BUTTONS_REPORT="Report"
 TPL_ITALIAPA_BUTTONS_CSV="CSV"
 TPL_ITALIAPA_BUTTONS_CLOSE="Close"
+TPL_ITALIAPA_CONTACT_CATEGORIES_VIEW_DEFAULT_DESC="Shows a list of contact categories within a category as Organization chart."
+TPL_ITALIAPA_CONTACT_CATEGORIES_VIEW_DEFAULT_OPTION="Default"
+TPL_ITALIAPA_CONTACT_CATEGORIES_VIEW_DEFAULT_TITLE="List All Contact Categories (layout: Organization chart)"
 TPL_ITALIAPA_DEBUG_FILENAME_DESC="The name of the file that stores current log messages."
 TPL_ITALIAPA_DEBUG_FILENAME_LABEL="Filename"
 TPL_ITALIAPA_DEBUG_PHPCONSOLE_DESC=""
