--- a/language/en-GB/en-GB.tpl_italiapa.sys.ini
+++ b/language/en-GB/en-GB.tpl_italiapa.sys.ini
@@ -19,6 +19,9 @@ TPL_ITALIAPA_CATEGORY_VIEW_MASONRY_TITLE="Category Blog (layout: Masonry)"
 TPL_ITALIAPA_CATEGORY_VIEW_NEWS_DESC="Displays article introductions in a single or multi-column layout."
 TPL_ITALIAPA_CATEGORY_VIEW_NEWS_OPTION="News"
 TPL_ITALIAPA_CATEGORY_VIEW_NEWS_TITLE="Category Blog (layout: News)"
+TPL_ITALIAPA_CONTACT_CATEGORIES_VIEW_DEFAULT_DESC="Shows a list of contact categories within a category as Organization chart."
+TPL_ITALIAPA_CONTACT_CATEGORIES_VIEW_DEFAULT_OPTION="Default"
+TPL_ITALIAPA_CONTACT_CATEGORIES_VIEW_DEFAULT_TITLE="List All Contact Categories (layout: Organization chart)"
 TPL_ITALIAPA_FEATURED_VIEW_FOCUS_DESC="Displays article introductions in a single or multi-column layout for featured articles from all categories."
 TPL_ITALIAPA_FEATURED_VIEW_FOCUS_OPTION="Focus"
 TPL_ITALIAPA_FEATURED_VIEW_FOCUS_TITLE="Featured Articles (layout: Focus)"
