--- a/language/en-GB/en-GB.tpl_italiapa.ini
+++ b/language/en-GB/en-GB.tpl_italiapa.ini
@@ -14,7 +14,7 @@ TPL_ITALIAPA_BUTTONS_CSV="CSV"
 TPL_ITALIAPA_BUTTONS_CLOSE="Close"
 TPL_ITALIAPA_DEBUG_FILENAME_DESC="The name of the file that stores current log messages."
 TPL_ITALIAPA_DEBUG_FILENAME_LABEL="Filename"
-TPL_ITALIAPA_DEBUG_PHPCONSOLE_DESC=""
+TPL_ITALIAPA_DEBUG_PHPCONSOLE_DESC="If enabled, it displays log messages in Google Chrome console and notification popups."
 TPL_ITALIAPA_DEBUG_PHPCONSOLE_LABEL="PHP Console"
 TPL_ITALIAPA_DEBUG_SYSTEM_DESC="If enabled, diagnostic information will be saved."
 TPL_ITALIAPA_DEBUG_SYSTEM_LABEL="Debug"
@@ -50,7 +50,7 @@ TPL_ITALIAPA_OPERATION_SUCCESS="Operation performed successfully"
 TPL_ITALIAPA_PAGE="Page"
 TPL_ITALIAPA_SCHEMA_EDUCATIONALORGANIZATION="Educational Organization"
 TPL_ITALIAPA_SCHEMA_GOVERNMENTORGANIZATION="Government Organization"
-TPL_ITALIAPA_SCHEMA_ORGANIZATION_DESC=""
+TPL_ITALIAPA_SCHEMA_ORGANIZATION_DESC="The type of organization."
 TPL_ITALIAPA_SCHEMA_ORGANIZATION_LABEL="Organization type"
 TPL_ITALIAPA_SCHEMA_ORGANIZATION="Organization"
 TPL_ITALIAPA_SKIP_TO_MAIN_CONTENT="Skip to Main Content"
