--- a/language/it-IT/it-IT.tpl_italiapa.ini
+++ b/language/it-IT/it-IT.tpl_italiapa.ini
@@ -14,7 +14,7 @@ TPL_ITALIAPA_BUTTONS_CSV="CSV"
 TPL_ITALIAPA_BUTTONS_CLOSE="Chiudi"
 TPL_ITALIAPA_DEBUG_FILENAME_DESC="Il nome del file in cui sono salvati i messaggi di log attuali."
 TPL_ITALIAPA_DEBUG_FILENAME_LABEL="Nome del file"
-TPL_ITALIAPA_DEBUG_PHPCONSOLE_DESC=""
+TPL_ITALIAPA_DEBUG_PHPCONSOLE_DESC="Se abilitato, visualizza i messaggi di debug in Google Chrome console."
 TPL_ITALIAPA_DEBUG_PHPCONSOLE_LABEL="Console PHP"
 TPL_ITALIAPA_DEBUG_SYSTEM_DESC="Se abilitato, saranno salvate le informazioni di diagnostica."
 TPL_ITALIAPA_DEBUG_SYSTEM_LABEL="Debug"
@@ -50,7 +50,7 @@ TPL_ITALIAPA_OPERATION_SUCCESS="Operazione eseguita con successo"
 TPL_ITALIAPA_PAGE="Pagina"
 TPL_ITALIAPA_SCHEMA_EDUCATIONALORGANIZATION="Organizzazione Educativa"
 TPL_ITALIAPA_SCHEMA_GOVERNMENTORGANIZATION="Organizzazione Governativa"
-TPL_ITALIAPA_SCHEMA_ORGANIZATION_DESC=""
+TPL_ITALIAPA_SCHEMA_ORGANIZATION_DESC="Il tipo di organizzazione."
 TPL_ITALIAPA_SCHEMA_ORGANIZATION_LABEL="Tipo di organizzazione"
 TPL_ITALIAPA_SCHEMA_ORGANIZATION="Organizzazione"
 TPL_ITALIAPA_SKIP_TO_MAIN_CONTENT="Vai al contenuto principale"
