--- a/administrator/language/it-IT/it-IT.plg_system_ipatinymce.sys.ini
+++ b/administrator/language/it-IT/it-IT.plg_system_ipatinymce.sys.ini
@@ -1,13 +1,13 @@
-; ItaliaPA - plg_system_ipatinymce
+; Joomla.Plugins.System.IpaTinyMCE 3.8.0
 ; Copyright (C) 2017 - 2019 Helios Ciancio. All rights reserved.
 ; License GNU General Public License version 3 or later; see LICENSE
 ; Note : All ini files need to be saved as UTF-8
 
-PLG_SYSTEM_IPATINYMCE="System - TinyMCE for ItaliaPA"
+PLG_SYSTEM_IPATINYMCE="System - ItaliaPA Toolbar for TinyMCE"
 PLG_SYSTEM_IPATINYMCE_DEBUG_FILENAME_DESC="Il nome del file dove salvare i messaggi di debug."
 PLG_SYSTEM_IPATINYMCE_DEBUG_FILENAME_LABEL="Filename"
 PLG_SYSTEM_IPATINYMCE_DEBUG_PHPCONSOLE_DESC=""
 PLG_SYSTEM_IPATINYMCE_DEBUG_PHPCONSOLE_LABEL="PHP Console"
 PLG_SYSTEM_IPATINYMCE_DEBUG_SYSTEM_DESC="Se abilitato, verranno prodotte informazioni diagnostiche su file."
 PLG_SYSTEM_IPATINYMCE_DEBUG_SYSTEM_LABEL="Debug"
-PLG_SYSTEM_IPATINYMCE_XML_DESCRIPTION="TinyMCE for ItaliaPA<br/>Editor - TinyMCE Configuration<br/>Plugin personalizzato: ipa<br/>Pulsante(i) personalizzato(i): |,ipa-tooltip,ipa-dialog,ipa-alert,ipa-callout,ipa-deflist"
+PLG_SYSTEM_IPATINYMCE_XML_DESCRIPTION="ItaliaPA Toolbar for TinyMCE<br/>Editor - TinyMCE Configuration<br/>Custom Plugin: ipa<br/>Custom Button: |,ipa-tooltip,ipa-dialog,ipa-alert,ipa-callout,ipa-deflist"
