--- a/administrator/language/en-GB/en-GB.plg_system_ipatinymce.ini
+++ b/administrator/language/en-GB/en-GB.plg_system_ipatinymce.ini
@@ -1,5 +1,5 @@
-; Joomla.Plugins.System.IpaTinyMCE 3.8.0
-; Copyright (C) 2017 - 2019 Helios Ciancio. All rights reserved.
+; Joomla.Plugins.System.IpaTinyMCE
+; Copyright (C) 2017 - 2020 Helios Ciancio. All rights reserved.
 ; License GNU General Public License version 3 or later; see LICENSE
 ; Note : All ini files need to be saved as UTF-8
 
