--- a/language/en-GB/en-GB.tpl_italiapa.ini
+++ b/language/en-GB/en-GB.tpl_italiapa.ini
@@ -48,6 +48,7 @@ TPL_ITALIAPA_NEWSANDEVENTS="News and events"
 TPL_ITALIAPA_OPEN_MENU="Open the menu"
 TPL_ITALIAPA_OPERATION_SUCCESS="Operation performed successfully"
 TPL_ITALIAPA_PAGE="Page"
+TPL_ITALIAPA_PAGINGBAR="Paging bar"
 TPL_ITALIAPA_SCHEMA_EDUCATIONALORGANIZATION="Educational Organization"
 TPL_ITALIAPA_SCHEMA_GOVERNMENTORGANIZATION="Government Organization"
 TPL_ITALIAPA_SCHEMA_ORGANIZATION_DESC="The type of organization."
