--- a/language/it-IT/it-IT.tpl_italiapa.ini
+++ b/language/it-IT/it-IT.tpl_italiapa.ini
@@ -48,6 +48,7 @@ TPL_ITALIAPA_NEWSANDEVENTS="Notizie ed eventi"
 TPL_ITALIAPA_OPEN_MENU="Accedi al menu"
 TPL_ITALIAPA_OPERATION_SUCCESS="Operazione eseguita con successo"
 TPL_ITALIAPA_PAGE="Pagina"
+TPL_ITALIAPA_PAGINGBAR="Barra di paginazione"
 TPL_ITALIAPA_SCHEMA_EDUCATIONALORGANIZATION="Organizzazione Educativa"
 TPL_ITALIAPA_SCHEMA_GOVERNMENTORGANIZATION="Organizzazione Governativa"
 TPL_ITALIAPA_SCHEMA_ORGANIZATION_DESC="Il tipo di organizzazione."
