--- a/administrator/language/en-GB/en-GB.plg_content_ipapagebreak.sys.ini
+++ b/administrator/language/en-GB/en-GB.plg_content_ipapagebreak.sys.ini
@@ -1,5 +1,5 @@
-; Page Break - plg_content_ipapagebreak
-; Copyright (C) 2018 Helios Ciancio. All rights reserved.
+; Joomla.Plugins.Content.Ipapagebreak
+; Copyright (C) 2017 - 2020 Helios Ciancio. All rights reserved.
 ; License GNU General Public License version 3 or later; see LICENSE
 ; Note : All ini files need to be saved as UTF-8
 
