--- a/language/en-GB/en-GB.tpl_italiapa.ini
+++ b/language/en-GB/en-GB.tpl_italiapa.ini
@@ -12,6 +12,7 @@ TPL_ITALIAPA_BACKTOTOP="Back to Top"
 TPL_ITALIAPA_BUTTONS_REPORT="Report"
 TPL_ITALIAPA_BUTTONS_CSV="CSV"
 TPL_ITALIAPA_BUTTONS_CLOSE="Close"
+TPL_ITALIAPA_BUTTONS_SAVE="Save &amp; Close"
 TPL_ITALIAPA_DEBUG_FILENAME_DESC="The name of the file that stores current log messages."
 TPL_ITALIAPA_DEBUG_FILENAME_LABEL="Filename"
 TPL_ITALIAPA_DEBUG_PHPCONSOLE_DESC="If enabled, it displays log messages in Google Chrome console and notification popups."
