--- a/language/it-IT/it-IT.tpl_italiapa.ini
+++ b/language/it-IT/it-IT.tpl_italiapa.ini
@@ -12,6 +12,7 @@ TPL_ITALIAPA_BACKTOTOP="Torna su"
 TPL_ITALIAPA_BUTTONS_REPORT="Report"
 TPL_ITALIAPA_BUTTONS_CSV="CSV"
 TPL_ITALIAPA_BUTTONS_CLOSE="Chiudi"
+TPL_ITALIAPA_BUTTONS_SAVE="Salva &amp; Chiudi"
 TPL_ITALIAPA_DEBUG_FILENAME_DESC="Il nome del file in cui sono salvati i messaggi di log attuali."
 TPL_ITALIAPA_DEBUG_FILENAME_LABEL="Nome del file"
 TPL_ITALIAPA_DEBUG_PHPCONSOLE_DESC="Se abilitato, visualizza i messaggi di debug in Google Chrome console."
