--- a/language/en-GB/en-GB.tpl_italiapa.ini
+++ b/language/en-GB/en-GB.tpl_italiapa.ini
@@ -55,7 +55,7 @@ TPL_ITALIAPA_SCHEMA_GOVERNMENTORGANIZATION="Government Organization"
 TPL_ITALIAPA_SCHEMA_ORGANIZATION_DESC="The type of organization."
 TPL_ITALIAPA_SCHEMA_ORGANIZATION_LABEL="Organization type"
 TPL_ITALIAPA_SCHEMA_ORGANIZATION="Organization"
-TPL_ITALIAPA_SKIP_TO_MAIN_CONTENT="Skip to Main Content"
+TPL_ITALIAPA_SKIP_TO_MAIN_SECTION="Skip to Main Section"
 TPL_ITALIAPA_SKIP_TO_NEXT_SECTION="Skip to the next section"
 TPL_ITALIAPA_SOURCE="Source"
 TPL_ITALIAPA_THEME_CITY="City"
