--- a/language/it-IT/it-IT.tpl_italiapa.ini
+++ b/language/it-IT/it-IT.tpl_italiapa.ini
@@ -55,11 +55,9 @@ TPL_ITALIAPA_SCHEMA_GOVERNMENTORGANIZATION="Organizzazione Governativa"
 TPL_ITALIAPA_SCHEMA_ORGANIZATION_DESC="Il tipo di organizzazione."
 TPL_ITALIAPA_SCHEMA_ORGANIZATION_LABEL="Tipo di organizzazione"
 TPL_ITALIAPA_SCHEMA_ORGANIZATION="Organizzazione"
-TPL_ITALIAPA_SKIP_TO_MAIN_CONTENT="Vai al contenuto principale"
+TPL_ITALIAPA_SKIP_TO_MAIN_SECTION="Vai alla sezione principale"
 TPL_ITALIAPA_SKIP_TO_NEXT_SECTION="Vai alla sezione successiva"
 TPL_ITALIAPA_SOURCE="Fonte"
-TPL_ITALIAPA_SKIP_TO_MAIN_CONTENT="Vai al contenuto principale"
-TPL_ITALIAPA_SKIP_TO_NEXT_SECTION="Vai alla sezione successiva"
 TPL_ITALIAPA_THEME_DEFAULT="Default"
 TPL_ITALIAPA_THEME_ITALIA="Italia"
 TPL_ITALIAPA_THEME_ITALIAAA="Italia accessibile"
